update ok/hk/hk1gl01-0.15.0.0.0.md. 标题字体缩小 每天1/3—1/4公斤  每天⅓—¼公斤

--- a/ok/hk/hk1gl01-0.15.0.0.0.md
+++ b/ok/hk/hk1gl01-0.15.0.0.0.md
@@ -1,4 +1,4 @@
-## 鼻塞《咽扁桃体肥大》
+## 鼻塞<small>《咽扁桃体肥大》</small>
 
 中医历来很少对这个病的论述，所以绝大多数混在“鼾眠”、“鼻塞”中讨论。本病常见于儿童，成人少见。
 
@@ -62,7 +62,7 @@
 
 1.内治法：实证，以消痰软坚为主。常用代表方有三子金灯汤。虚证，以益气化痰为主。常用代表方有四海六君子汤。
 
-此外，药食同源，运用食疗也是一个较好的办法。其中以芋艿为最理想。因为过去的蹲鸱丸本来治疗此病的（全部以芋艿制成）。吃法，每天1/3—1/4公斤。天天不辍，连续3—6个月。调味不拘甜、咸或淡，都可。干蒸、煮汤、做菜，俱可。祇要煮熟煮透。更有海带、海蜇等，也是很好的药用食物。
+此外，药食同源，运用食疗也是一个较好的办法。其中以芋艿为最理想。因为过去的蹲鸱丸本来治疗此病的（全部以芋艿制成）。吃法，每天⅓—¼公斤。天天不辍，连续3—6个月。调味不拘甜、咸或淡，都可。干蒸、煮汤、做菜，俱可。祇要煮熟煮透。更有海带、海蜇等，也是很好的药用食物。
 
 2.其它治法
 
