--- a/ok/bc/bc17-0.4.3.0.0.md
+++ b/ok/bc/bc17-0.4.3.0.0.md
@@ -6,7 +6,7 @@
 
 **天门冬功能清肺火、滋肾阴。**为百合科多年生草本植物天门冬的块根。简称天冬。秋季采挖，除去鬚根，沸水煮过，去皮，切段干燥入药。药材以肥满致密、色黄白、半透明者为佳。
 
-本品甘苦大寒，苦寒清热，甘寒滋润，入肺、肾经。故能清肺热、滋肾阴，善冶肺肾阴虚有热之证。主治肺热阴伤之燥咳，咯血，阴虚内热，津伤烦渴，肠燥便秘等证。然寒性较甚，脾胃虚寒，食少便溏者忌服。
+本品甘苦大寒，苦寒清热，甘寒滋润，入肺、肾经。故能清肺热、滋肾阴，善治肺肾阴虚有热之证。主治肺热阴伤之燥咳，咯血，阴虚内热，津伤烦渴，肠燥便秘等证。然寒性较甚，脾胃虚寒，食少便溏者忌服。
 
 【临证应用】天门冬清肺润燥止咳，常用于燥咳、咯血，且多与麦冬同用，如二冬膏。对阴虚内热，舌干口渴，津伤消渴，配生地、人参，可益气养阴，如三才汤。肠燥便秘可与当归、苁蓉等润肠药同用。
 
