--- a/ok/bc/bc20-0.22.0.0.0.md
+++ b/ok/bc/bc20-0.22.0.0.0.md
@@ -6,6 +6,6 @@
 
 本品味苦辛，性温，具强烈而持久的大蒜样臭气。人肝、脾、胃经。功专消积、杀虫，主治癥瘕痞块、虫积、肉积、心腹冷痛、疟疾、痢疾等证。《本草经疏》曰：阿魏，其气臭烈殊常，故善杀诸虫，专辟恶气。辛则走而不守，温则通而能行，故能消积、利诸窍、除秽恶也。
 
-【临证应用】阿魏配伍白芥子，鳖甲、三棱、莪术等为丸内服，可治一切痞块癥瘕；又可制成膏药外敷。本品又有消肉积的作用，可配六神曲，山楂等以冶肉食所伤的食积停滞。
+【临证应用】阿魏配伍白芥子，鳖甲、三棱、莪术等为丸内服，可治一切痞块癥瘕；又可制成膏药外敷。本品又有消肉积的作用，可配六神曲，山楂等以治肉食所伤的食积停滞。
 
 【用量用法】内服1一1.5克，入丸散。外用适量，可熬制药膏或研末入膏药内贴。本品气味奇臭，不宜入汤剂。
