--- a/ok/fjx/fjx17-0.3.0.0.0.md
+++ b/ok/fjx/fjx17-0.3.0.0.0.md
@@ -8,7 +8,7 @@
 
 〔临证应用〕用于乳岩、瘰疬、痰核、流注等属体气尚实者。
 
-本方可用于脓未成，或脓已成未溃之证，脓溃后勿用，以兔伤正。
+本方可用于脓未成，或脓已成未溃之证，脓溃后勿用，以免伤正。
 
 本方现多用治淋巴结炎、淋巴结结核、乳腺囊性增生、乳腺癌、多发性脓肿、骨髓炎等多种外科疾病。
 
