--- a/ok/fjx/fjx17-0.5.0.0.0.md
+++ b/ok/fjx/fjx17-0.5.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔服法〕五味以水六升，煮取一升，去滓，内（即纳）芒硝，再煎沸，顿服之。（水煎服）
 
-〔讲解〕本方为治肠痈（急性阑尾炎）属于湿热与瘀血互结之主方。本方融苦寒泻下、活血化瘀、清热除湿三法而成。方中用大黄泻下瘀热结聚，清热解毒，丹皮清热凉血、活血祛瘀，两药合用，泻瘀热湿热而为君。芒硝软坚散结，协大黄荡涤实热而下行，具“釜底抽薪”及“推陈致新”之效。桃仁活血破血、散瘀通便，冬瓜仁清湿热，排脓散结消痈，共为臣佐之药。诸药合用，有泻热破瘀、散结消肿之效。
+〔讲解〕本方为治肠痈（急性阑尾炎）属于湿热与瘀血互结之主方。本方溶苦寒泻下、活血化瘀、清热除湿三法而成。方中用大黄泻下瘀热结聚，清热解毒，丹皮清热凉血、活血祛瘀，两药合用，泻瘀热湿热而为君。芒硝软坚散结，协大黄荡涤实热而下行，具“釜底抽薪”及“推陈致新”之效。桃仁活血破血、散瘀通便，冬瓜仁清湿热，排脓散结消痈，共为臣佐之药。诸药合用，有泻热破瘀、散结消肿之效。
 
 该方的常用加减法为：如发热重的可酌加银花、连翘、蒲公英、败酱草、赤芍等一、二味以清热解毒。如腹痛甚的，加玄胡索、乳香、没药以活血行气止痛。如右下腹出现肿块的，可加当归、赤芍、皂角刺、地丁草、红藤等以加强活血祛瘀、清热解毒。如见大便似痢不爽，舌红苔少，脉数有伤阴象征，可去芒硝，加生地、玄参、花粉养阴清热生津。如见腹痛高热湿热重的可加黄连、黄芩以清热泻火燥湿。如大热大渴的加生石膏、花粉，以清热泻火、生津止渴。呕吐不食的，加黄连、姜半夏，苦辛通降，清热止呕。腹胀的加厚朴以行气消胀。
 
@@ -12,7 +12,7 @@
 
 临证使用指征为：肠痈初起，右少腹疼痛拒按，腹皮微急，甚则局部有痞块，小便自调，时时发热，自汗出，又恶寒，或右脚屈而不伸，牵引则痛剧，苔黄腻，脉滑数属里热实证者。
 
-凡重型急性化脓性或坏疽性阑尾炎，阑尾炎合并腹膜炎（或有中毒性休克，或腹腔脓液多的),婴儿急性阑尾炎，妊娠阑尾炎合并弥漫性腹膜炎，阑尾寄生虫病等本方不宜使用。对老人、孕妇、或体质过于虚弱的，均应慎用。
+凡重型急性化脓性或坏疽性阑尾炎，阑尾炎合并腹膜炎（或有中毒性休克，或腹腔脓液多的)，婴儿急性阑尾炎，妊娠阑尾炎合并弥漫性腹膜炎，阑尾寄生虫病等本方不宜使用。对老人、孕妇、或体质过于虚弱的，均应慎用。
 
 〔文献摘要〕“夫肠痈之病，皆由湿热瘀聚，郁结而成。病既在内，与外痈之治，又自不同。然肠中既结聚不散，为肿为毒，非用下法，不能解散。故以大黄之苦寒行血，芒硝之咸寒软坚，荡涤一切湿热瘀结之毒，推之而下，桃仁入肝破血，瓜子润肺行痰，丹皮清散血分之郁热，以除不尽之余氛耳”。（《成方便读》）
 
