--- a/ok/qs/qs03_10.md
+++ b/ok/qs/qs03_10.md
@@ -12,13 +12,13 @@
 
 去夏菔翘加术芍，小保和丸助脾佳。
 
-本方由神曲、山楂、茯苓、半夏、陈皮、连翘、菜服子等七味药组成，方中亦可加麦芽，或用麦芽汤送下。功能消积和胃。主治食积停滞之腹满时痛、嗳腐吞酸。
+本方由神曲、山楂、茯苓、半夏、陈皮、连翘、莱服子等七味药组成，方中亦可加麦芽，或用麦芽汤送下。功能消积和胃。主治食积停滞之腹满时痛、嗳腐吞酸。
 
 本方加白术，名保安丸。功能消而兼补，治脾虚食滞之腹满痛及小儿泄泻。
 
 本方去半夏、莱菔子、连翘，加白术、白芍，名小保和丸。能助脾进食。
 
-**2.枳实导滞丸**(附:木香导滞九)
+**2.枳实导滞丸**(附:木香导滞丸)
 
 **枳实导滞首大黄，芩连曲术茯苓襄，**
 
@@ -88,7 +88,7 @@
 
 **神曲干姜兼泽泻，温中化湿酒醉灵。**
 
-酲 chéng，读成，因酒致病为醒。
+酲 chéng，读成，因酒致病为酲。
 
 本方由葛花、木香、砂仁、人参、白术、白豆蔻、青皮、陈皮、茯苓、猪苓、神曲、干姜、泽泻等十三味药组成。功能温中化湿。主治饮多伤脾，眩晕呕吐、胸膈痞闷。
 
@@ -100,7 +100,7 @@
 
 本方由蟾蜍、砂仁等二味药组成。功能行气消积。主治气臌，并治小儿疳积、面黄肌瘦，肚腹胀满。
 
-**9.鳖甲煎丸**(附:化（疒征）回生开)
+**9.鳖甲煎丸**(附:化癥回生丹)
 
 **鳖甲煎丸疟母方，䗪虫鼠妇及蜣螂，**
 
@@ -108,7 +108,7 @@
 
 **瞿麦柴芩阿半夏，桃仁葶劳和参尝。**
 
-**化（疒征）回生苏子霜，艾蒲椒炭桂参香，**
+**化癥回生苏子霜，艾蒲椒炭桂参香，**
 
 **杏桃归芍萸芎索，苏木红花片子姜，**
 
@@ -116,15 +116,15 @@
 
 **两头尖漆真阿魏，益母鳖胶地大黄，**
 
-**寒邪侵袭深延入，血分成（疒征）证可详，**
+**寒邪侵袭深延入，血分成癥证可详，**
 
 **炼蜜为丸钱五重，蜡皮封护慎毋忘。**
 
 **疟母**   指疟疾日久不愈，协下有块。
 
-本方由䗪虫、鼠妇(地虱婆)、蜣螂、蜂房、鳖甲、石苇、赤硝、大黄、射干、桂枝、厚朴、凌霄花、牡丹、芍药、干姜、瞿麦、柴胡、黄芩、阿胶、半夏、桃仁、葶苈、人参等二十三味药组成。功能消（疒征）化积。主治疟母。
+本方由䗪虫、鼠妇(地虱婆)、蜣螂、蜂房、鳖甲、石苇、赤硝、大黄、射干、桂枝、厚朴、凌霄花、牡丹、芍药、干姜、瞿麦、柴胡、黄芩、阿胶、半夏、桃仁、葶苈、人参等二十三味药组成。功能消癥化积。主治疟母。
 
-化（疒征）回生丹由苏子霜、艾叶炭、蒲黄炭、川椒炭、肉桂、人参、香附、杏仁、桃仁、当归尾、白芍、吴茱萸、川芎、延胡索、苏木、红花、片子姜黄、虻虫、水蛭、良姜、五灵脂、乳香、没药、降香、小茴香炭、麝香、丁香、两头尖(竹节香附)、干漆、真阿魏、益母膏、鳖甲胶、地黄、三棱、大黄等三十五味药组成、炼蜜为丸，重一钱五分、蜡皮封护。功能逐淤散结，消（疒征）化积。主治寒邪入里，日久血凝成淤，结成（疒征）积。及妇人经闭、干血痨等症。 
+化癥回生丹由苏子霜、艾叶炭、蒲黄炭、川椒炭、肉桂、人参、香附、杏仁、桃仁、当归尾、白芍、吴茱萸、川芎、延胡索、苏木、红花、片子姜黄、虻虫、水蛭、良姜、五灵脂、乳香、没药、降香、小茴香炭、麝香、丁香、两头尖(竹节香附)、干漆、真阿魏、益母膏、鳖甲胶、地黄、三棱、大黄等三十五味药组成、炼蜜为丸，重一钱五分、蜡皮封护。功能逐淤散结，消癥化积。主治寒邪入里，日久血凝成淤，结成癥积。及妇人经闭、干血痨等症。 
 
 **10.胆道排石汤**(天津南开医院验方)
 
