--- a/ok/gk/gk02-0.0.1.0.0.md
+++ b/ok/gk/gk02-0.0.1.0.0.md
@@ -28,4 +28,4 @@
 
 （四）机能解剖观对骨、关节、筋、肌和脉的认识 骨伤科主要研究人体骨、关节、筋和肌肉所组成运动系统的伤病。中医对骨、关节、筋、肌肉和脉的形态结构，生理功能的大体认识基本上是从机能解剖观出发的。例如对骨的生理功能，《内经》指出为“骨为干”、“骨属屈伸”。对关节的认识，《素问•五脏生成篇》说：“诸筋者，皆属于节”。对筋、肌肉的认识，《灵枢•经脉》描述为“筋为刚”、“肉为墙”。
 
-综上所述，从天人相应生化观、整体观和体相观出发认识人体，是中医在解剖生理学方面的观点。这些观点，也是现代机能解剖学的主要观点。虽然在某些方面是朴素的、原始的，但是，其认识方法是科学的。特别是在这些理论观点中，包含了系统论、控制论和信息论等现代自然科学现论的萌芽。正如机能解剖学是研究人体解剖学的发展方向一样，中医传统的机能解剖观，有着重要的临床价值和科学意义.
+综上所述，从天人相应生化观、整体观和体相观出发认识人体，是中医在解剖生理学方面的观点。这些观点，也是现代机能解剖学的主要观点。虽然在某些方面是朴素的、原始的，但是，其认识方法是科学的。特别是在这些理论观点中，包含了系统论、控制论和信息论等现代自然科学现论的萌芽。正如机能解剖学是研究人体解剖学的发展方向一样，中医传统的机能解剖观，有着重要的临床价值和科学意义。
