--- a/ok/bc/bc03-0.3.5.0.0.md
+++ b/ok/bc/bc03-0.3.5.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】（1）五劳：指肺劳、肝劳、心劳、脾劳、肾劳五种虚劳证。 （2）惊痫：泛指惊风、痫证各种病证。
 
- **牡丹皮功专凉血散瘀，且具有凉血而不留瘀，活血而不妄行的特点**。为毛茛科多年生落叶小灌木植物牡丹的根皮。药材以条壮皮厚粉性足者为佳。生用者，系原药材去外皮及木心，能净切片晒干用。简称丹皮。炒用者，可减轻寒凉辛散之性；或以酒炒，以加强辛散化瘀作用。
+ **牡丹皮功专凉血散瘀，且具有凉血而不留瘀，活血而不妄行的特点**。为毛茛科多年生落叶小灌木植物牡丹的根皮。药材以条壮皮厚粉性足者为佳。生用者，系原药材去外皮及木心，洗净切片晒干用。简称丹皮。炒用者，可减轻寒凉辛散之性；或以酒炒，以加强辛散化瘀作用。
 
 《纲目》记载丹皮“赤花者利，白花者补。”《本草正义 》亦有“赤者行性多，白者行性缓”一说，故《备要》谓花红者入药。
 
