--- a/ok/bc/bc03-0.3.6.0.0.md
+++ b/ok/bc/bc03-0.3.6.0.0.md
@@ -1,7 +1,6 @@
-### 紫草
+### 紫  草
 
-**〔原文〕甘咸气寒。入厥阴心包、肝。血分。凉血活血，利九窍，通二便**。咸寒性滑。**治心腹邪气**，即热
-也。**水肿五疸**，**瘑癣**(1)**恶疮**，血热所致。**及痘疮血热毒盛，二便闭涩者**。血热则毒闭，得紫草凉之，则血行而毒出，大便利者忌之。《活幼心书》曰：紫草性寒，小儿脾实者可用，脾虚者反能作泻。古方惟用茸，取其初得阳气，以类触类，用发痘疮。今人不达此理，一概用之误矣。**泻者忌用。去头须酒洗。**
+**〔原文〕甘咸气寒。入厥阴心包、肝。血分。凉血活血，利九窍，通二便**。咸寒性滑。**治心腹邪气**，即热也。**水肿五疸**，**瘑癣**(1)**恶疮**，血热所致。**及痘疮血热毒盛，二便闭涩者**。血热则毒闭，得紫草凉之，则血行而毒出，大便利者忌之。《活幼心书》曰：紫草性寒，小儿脾实者可用，脾虚者反能作泻。古方惟用茸，取其初得阳气，以类触类，用发痘疮。今人不达此理，一概用之误矣。**泻者忌用。去头须酒洗。**
 
  【讲解】(1)瘑癣：瘑，音ge。瘑癣即湿疹。
 
