update ok/wk/wk14-0.9.0.0.0.md. 原文有“2.癃闭瘾闭外洗方”，应为“2.癃闭外洗方”，电子版已改。

--- a/ok/wk/wk14-0.9.0.0.0.md
+++ b/ok/wk/wk14-0.9.0.0.0.md
@@ -46,7 +46,7 @@
 
 1.食盐500克炒热，布包，乘热熨小腹部，冷后炒热再熨。
 
-2.癃闭瘾闭外洗方：蒲公英60克、败酱草60克、附子30克、大黄30克、皂刺30克、肉桂15克，加水5000毫升，煎沸，先熏后洗，待温坐浴，一次40分钟，一日数次，以通为度。
+2.癃闭外洗方：蒲公英60克、败酱草60克、附子30克、大黄30克、皂刺30克、肉桂15克，加水5000毫升，煎沸，先熏后洗，待温坐浴，一次40分钟，一日数次，以通为度。
 
 3.导尿：在无菌操作下，放入导尿管引流放尿。如尿潴留时间较长，膀胱极度膨胀的病人，应分次导尿，一般可先放出500毫升，其余部分可在几小时内放出。
 
