update ok/hk/hk1gl01-0.16.0.0.0.md. 标题字体缩小 中间对摺，成“img”，  原文可能是打不出来，插入的图片。中间对摺，成“⊃”，

--- a/ok/hk/hk1gl01-0.16.0.0.0.md
+++ b/ok/hk/hk1gl01-0.16.0.0.0.md
@@ -1,4 +1,4 @@
-## 喉痈（扁桃体周围脓肿）
+## 喉痈<small>（扁桃体周围脓肿）</small>
 
 本病常称喉痈，但喉痈不等于就是本病。因中医的喉痈，往往还包括扁桃体脓肿、舌扁桃体脓肿、咽后脓肿、咽旁脓肿等等。有时还可把咽壁或咽间隙化脓性感染也统称在内。纵然中医常以喉痈来代表咽部许多脓肿，但也有些文献，也予以细致划分的，如喉痈、悬痈、关内痈、关外痈、斗底痈等。因不论那一种脓肿，其病因、病理以及辨证论治完全同样，所以单以喉痈一名来代表各种不同的脓肿，也已足够。而且许多脓肿里，以扁桃体周围脓肿最为多见，可以“举一反三”地讨论本病。
 
@@ -74,7 +74,7 @@
 
 脓肿已形成，内脓已有，当予以切开引流。在过去限于条件，所以常用的为喉枪或笔刀。现在则于粘膜表面予以麻醉，必要时也可注射些普鲁卡因。在最隆起处切开粘膜及粘膜下组织，深约一厘米，再插入止血钳，进入脓腔，扩张切口，排出脓液，并放置引流物。以后每天再行扩张一次，直至脓液排尽。
 
-中医取用的引流物，是用绵纸捻制的药线（又称纸钉、药钉、捻子）。应长5厘米，中间对摺，成“<img src="file:///C:\Users\ADMINI~1\AppData\Local\Temp\msohtmlclip1\01\clip_image002.gif" alt="img"  />”，然后双脚摺成90度的转脚，呈“∩”。擂上冰硼散或锡类散，插入脓腔即可。唯常以言语、饮食、吐咽等动作而落掉。那末即另插新的。否则，创口即可闭锁。
+中医取用的引流物，是用绵纸捻制的药线（又称纸钉、药钉、捻子）。应长5厘米，中间对摺，成“⊃”，然后双脚摺成90度的转脚，呈“∩”。擂上冰硼散或锡类散，插入脓腔即可。唯常以言语、饮食、吐咽等动作而落掉。那末即另插新的。否则，创口即可闭锁。
 
 待脓腔缩小到不能容纳药线时，即撤去药线。外用药改用珠黄散。
 
