--- a/ok/bc/bc03-0.3.7.0.0.md
+++ b/ok/bc/bc03-0.3.7.0.0.md
@@ -1,7 +1,6 @@
-### 童 便
+### 童  便
 
-**〔原文〕咸寒**。时珍曰温。**能引肺火下行从膀胱出，乃其旧路**，**降火滋阴甚速，润肺散瘀**。咸走
-血。**治肺痿失音，吐衄损伤**，凡跌打损伤，血闷欲死者，擘开口以热尿灌之，下咽即醒。一切金疮受杖，并宜用之，不伤脏腑，若用他药，恐无瘀者，反致误人矣。**胞胎不下**。皆散癖之功。**凡产后血晕，败血入肺，阴虚久嗽，火蒸如燎者，惟此可以治之**。晋•褚澄《劳极论》曰：降火甚速，降血甚神；饮溲溺百无一死，服寒凉药百无一生。**取十二岁以下童子**，少知识，无相火。**不食荤腥酸咸者佳。去头尾，取中间一节清澈如水者，用当热饮。热则真气尚存，其行自速；冷则惟有咸寒之性。入姜汁**、行痰。**韭汁**散痰。**更好**，**冬月用汤温之**。李士材曰：炼成秋石，真元之气渐失，不及童便多矣。《普济方》：治目赤肿痛，用自己小便，乘热抹洗，即闭目少顷，此以真气退其邪热也。
+**〔原文〕咸寒**。时珍曰温。**能引肺火下行从膀胱出，乃其旧路**，**降火滋阴甚速，润肺散瘀**。咸走血。**治肺痿失音，吐衄损伤**，凡跌打损伤，血闷欲死者，擘开口以热尿灌之，下咽即醒。一切金疮受杖，并宜用之，不伤脏腑，若用他药，恐无瘀者，反致误人矣。**胞胎不下**。皆散瘀之功。**凡产后血晕，败血入肺，阴虚久嗽，火蒸如燎者，惟此可以治之**。晋•褚澄《劳极论》曰：降火甚速，降血甚神；饮溲溺百无一死，服寒凉药百无一生。**取十二岁以下童子**，少知识，无相火。**不食荤腥酸咸者佳。去头尾，取中间一节清澈如水者，用当热饮。热则真气尚存，其行自速；冷则惟有咸寒之性。入姜汁**、行痰。**韭汁**散痰。**更好**，**冬月用汤温之**。李士材曰：炼成秋石，真元之气渐失，不及童便多矣。《普济方》：治目赤肿痛，用自己小便，乘热抹洗，即闭目少顷，此以真气退其邪热也。
 
 【讲解】**童便具有滋阴降火，止血消瘀之功。取十岁以下健康儿童的小便，故名为童便**。一般去头尾，用中间一段。
 
