update ok/hk/hk1gl01-0.17.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.17.0.0.0.md
+++ b/ok/hk/hk1gl01-0.17.0.0.0.md
@@ -1,4 +1,4 @@
-## 鱼鳞风（咽角化症、扁桃体角化症）
+## 鱼鳞风<small>（咽角化症、扁桃体角化症）</small>
 
 本病古文献中，未见专论。以其白色点点，所以经常混在烂候痹、烂喉风或烂乳蛾一类病种里论述。此外如鱼鳞风、鱼鳞癣中，甚至咽喉恶疮中，肯定也有本病混入。
 
