--- a/ok/bc/bc03-0.3.9.0.0.md
+++ b/ok/bc/bc03-0.3.9.0.0.md
@@ -1,9 +1,8 @@
 ### 人中白
 
-**〔原文〕咸平。降火散瘀，治肺瘀鼻衄**，刮人中白，新瓦火上煏干，调服即止。**劳热消渴，瘟疮倒陷，牙**
-**疳口疮，即溺垽，煅研用**。以蒙馆童子便桶，山中老僧溺器刮下者尤佳。
+**〔原文〕咸平。降火散瘀，治肺瘀鼻衄**，刮人中白，新瓦火上煏干，调服即止。**劳热消渴，痘疮倒陷，牙疳口疮，即溺垽，煅研用**。以蒙馆童子便桶，山中老僧溺器刮下者尤佳。
 
-【讲解】	(1)煏:(fu复)原作“逼”，据文义改。火烤为蝠。
+【讲解】	(1)煏:(fu复)原作“逼”，据文义改。火烤为煏。
 
 **人中白功专清热降火消瘀**。为人尿自然沉结的固体物。煅人中白，即取人中白置坩锅内，炭火锻至红色，取出，放凉； 飞人中白，即取人中白研成细末，再水飞至无声为度。
 
