--- a/ok/wk/wk15-0.4.0.0.0.md
+++ b/ok/wk/wk15-0.4.0.0.0.md
@@ -56,7 +56,7 @@
 
 宋XX，男，30岁，工人。装车跌伤左肱肯破伤骨折，第九日发热，心烦口渴，并呈现牙关紧，项强硬，苦笑面容，抽搐，间时一发。经验看创口，锈涩有味，诊为破伤风早期，以双氧水冲洗伤口，给以疏风散（酒川芎9克、升麻3克、京子9克、荆芥6克、防风9克、天麻6克、南星9克、乳香、没药各6克、全蝎3克、僵蚕6克、川羌活9克、桂枝9克、烕灵仙9克、大白6克、芒硝6克、甘草3克、白芷9克），服一剂见汗，两剂后泻下便溏，症状见消。
 
-按：洛阳郭氏，为正骨世家，对破伤风治疗有丰富经验。疏风散治破伤风初期，云服后“盖被微出汗即愈。”并说：“患者上肢冷过肘、下肢凉过膝，神色昏迷，口角流水者则不可救治，均经验之谈，可供参考。（节选自《著名中医学家的学术经验》之二）
+按：洛阳郭氏，为正骨世家，对破伤风治疗有丰富经验。疏风散治破伤风初期，云服后“盖被微出汗即愈”。并说：“患者上肢冷过肘、下肢凉过膝，神色昏迷，口角流水者则不可救治”，均经验之谈，可供参考。（节选自《著名中医学家的学术经验》之二）
 
 〔简便验方〕
 
@@ -68,4 +68,4 @@
 
 《诸病源候论•卷三十六•腕伤病诸候》“夫脘折伤，皮肉作疮者，慎不可当风及自扇，若风入疮内，犯诸经络，即致痉，痉者脊背强直，口噤不能言也。”
 
-《医宗金鉴•外科心法•卷七十五•破伤风》“皮肉损破外伤风，初觉牙关紧不松，甚则角弓反张状，吐涎抽搐不时宁。四因动静惊溃审，陷缩神昏不语凶，在表宜汗里宜下，半表半里以和平。”
+《医宗金鉴•外科心法•卷七十五•破伤风》“皮肉损破外伤风，初觉牙关紧不松，甚则角弓反张状，吐涎抽搐不时宁。四因动静惊溃审，陷缩神昏不语凶，在表宜汗里宜下，半表半里以和平”。
