--- a/ok/bc/bc03-0.3.10.0.0.md
+++ b/ok/bc/bc03-0.3.10.0.0.md
@@ -1,4 +1,4 @@
-### 芸苔
+### 芸  苔
 
 **〔原文〕辛温。散血消肿，捣贴乳痈丹毒，**孙思邈曰：捣贴丹毒，随手即消，其效如神。**动疾发疮** 。即油菜。道家五荤之一。
 
@@ -6,7 +6,7 @@
 
 【讲解】 **芸苔功能行血散结**。为十字花科植物油菜的嫩茎叶。其种子也供药用，称芸苔子。
 
-本品性味辛凉。入肺、脾、肝经。功能消肿散血，主治劳伤肚血，血痢丹毒，热毒疮疡，乳痈等。
+本品性味辛凉。入肺、脾、肝经。功能消肿散血，主治劳伤吐血，血痢丹毒，热毒疮疡，乳痈等。
 
 芸苔子性味辛温，功能行血破气，消肿散结，可治产后血滞腹痛，血痢肿毒，痔漏等症。
 
