update ok/hk/hk1gl01-0.18.0.0.0.md. 标题字体缩小

--- a/ok/hk/hk1gl01-0.18.0.0.0.md
+++ b/ok/hk/hk1gl01-0.18.0.0.0.md
@@ -1,4 +1,4 @@
-## 干咳（喉源性咳嗽）
+## 干咳<small>（喉源性咳嗽）</small>
 
 本病的特点，是咽喉作痒之后即咳。咳时很不爽快，而且连续地咳，除非饮水，否则咳无休止。无痰。病程漫长，从几个月至几年。这种咳病，不是新病种，过去并不多见。解放之后，各种重用糖浆的冲剂、膏剂滥用于伤风感冒之后，因而本病日渐增多。
 
