update ok/bc/bc08-0.0.3.0.0.md. 根据扫描版修改错字。

--- a/ok/bc/bc08-0.0.3.0.0.md
+++ b/ok/bc/bc08-0.0.3.0.0.md
@@ -6,7 +6,7 @@
 
   **冰片功能开窍醒神，善散郁火**。为龙脑香科常绿乔木龙脑香的树干经蒸馏冷却而得的结晶，称“龙脑冰片”，亦称“龙脑香”或“梅片”。现主要以松节油、樟脑等为原料，经化学方法制成的合成品，称“机制冰片”；或由菊科多年生草本植物艾纳香（大艾）叶提取的结晶，称"艾片”。龙脑香主产东南亚地区，我国台湾曾有引种；艾纳香主产我国广东、广西、云南等地；机片生产于上海、天津、南京等地。
 
-  本品辛苦微寒，入心、脾、肺经。辛散苦泄，芳香走窜，善通诸窍，有开窍醒神之效，用治窍闭神昏之证。本品兼散郁火，外用有消肿止痛之功。并有防腐、止痒之效，敌为外治喉证、口疮、目疾，以及疮疡的要药。
+  本品辛苦微寒，入心、脾、肺经。辛散苦泄，芳香走窜，善通诸窍，有开窍醒神之效，用治窍闭神昏之证。本品兼散郁火，外用有消肿止痛之功。并有防腐、止痒之效，故为外治喉证、口疮、目疾，以及疮疡的要药。
 
   【临证应用】冰片开窍醒神之功与麝香相似，但力较逊。二药常配伍使用，如至宝丹、安宫牛黄丸，以治窍闭神昏之证。冰片单用点眼，可治目赤肿痛。配硼砂、朱砂、玄明粉，研极细，吹于患处，如常用成药冰硼散，治咽喉肿痛及口疮。
 
