--- a/ok/bc/bc03-0.4.0.0.0.md
+++ b/ok/bc/bc03-0.4.0.0.0.md
@@ -1,5 +1,5 @@
-## 第四节清热解毒药
+## 第四节   清热解毒药
 
 清热解毒药具有清火热、消肿毒的特点，适用于各种热毒证，如痈肿疮疖，丹毒斑疹，咽喉肿痛，以及痢疾，虫蛇咬伤等证。
 
-临床应用本类药物时，应根据热毒表现的不同证候，结合药物的特点，针对性地选择适宜的药物，或配伍有关药用。如热毒邪气在血分者，应配清热凉血之品；火热炽盛者，应配泻火药；挟湿者当配伍燥湿或利湿药物等等。对于虚人述要适当配伍补益药以固护正气。但疮疡、喉痹、痢疾等属阴证寒证者，则不宜应用。
+临床应用本类药物时，应根据热毒表现的不同证候，结合药物的特点，针对性地选择适宜的药物，或配伍有关药用。如热毒邪气在血分者，应配清热凉血之品；火热炽盛者，应配泻火药；挟湿者当配伍燥湿或利湿药物等等。对于虚人还要适当配伍补益药以固护正气。但疮疡、喉痹、痢疾等属阴证寒证者，则不宜应用。
