--- a/ok/gk/gk07-0.3.0.0.0.md
+++ b/ok/gk/gk07-0.3.0.0.0.md
@@ -1,6 +1,6 @@
 ## 第三节　胸胁部内伤
 
-胸即指身前缺盆以下，腹部以上，有胁骨之处，胁即指胸部两侧，腋下有肋骨处。胸为肺之分野，肝经之脉，由上而下循胸胁，因其部位相近，紧密关连，证候有相同之处，故并名胸胁。胸胁内伤即指上述部位受伤，致气血经络受伤而产生胸胁部位的病证。一般损伤多“由外及内”，胸胁内伤多与胸胁挫伤、肋骨骨折同时发生，有时系骨折所引起，故一并叙述。
+胸即指身前缺盆以下，腹部以上，有胁骨之处；胁即指胸部两侧，腋下有肋骨处。胸为肺之分野，肝经之脉，由上而下循胸胁，因其部位相近，紧密关连，证候有相同之处，故并名胸胁。胸胁内伤即指上述部位受伤，致气血经络受伤而产生胸胁部位的病证。一般损伤多“由外及内”，胸胁内伤多与胸胁挫伤、肋骨骨折同时发生，有时系骨折所引起，故一并叙述。
 
 〔病因病机〕
 
@@ -22,7 +22,7 @@
 
 （4）血胸：是胸胁内伤的常见病之一，属气血两伤，伤血为主，临床可分两种类型：若血胸形成后，如果破裂的血管被血块所阻塞，出血停止，移为非进行性血胸，如破裂的血管继续出血，症状逐渐加剧，则移为进行性血胸。由于肺、膈和心脏的不断搏动而有去血纤维蛋白的作用，因此胸腔内的积血在短时期内不易凝固，但胸膜受到刺激后，常渗出纤维素，时间较久则在胸膜敷盖成层，呼吸动作减弱或消失后又可失去血纤维蛋白的作用，而造成凝固性血胸。最后，可形成机化血胸。
 
-血胸的症状随出血量的多少而不同，少量（不超过400毫升）的积血可无明显自觉症状，大量积血（血量达1，500毫升以上）时，可出现休克，面色苍白，呼吸浅促、脉搏低弱，心率加快；如果肺和纵膈被积血所压迫，可出现呼吸困难、发绀等现象，并可见肋间饱满，叩诊呼吸音低微甚至消失，胸穿刺若抽出血液则诊断明确。若将抽出的血液进行细胞计数和细菌培养，可确楚有无脓胸存在。X线照片显示肋膈角消失，积血液较多时则下肺部为积血所掩盖而模糊不清。如同时存在气胸，则出现气液平面。
+血胸的症状随出血量的多少而不同，少量（不超过400毫升）的积血可无明显自觉症状，大量积血（血量达1,500毫升以上）时，可出现休克，面色苍白，呼吸浅促、脉搏低弱，心率加快；如果肺和纵膈被积血所压迫，可出现呼吸困难、发绀等现象，并可见肋间饱满，叩诊呼吸音低微甚至消失，胸穿刺若抽出血液则诊断明确。若将抽出的血液进行细胞计数和细菌培养，可确定有无脓胸存在。X线照片显示肋膈角消失，积血液较多时则下肺部为积血所掩盖而模糊不清。如同时存在气胸，则出现气液平面。
 
 〔治疗〕
 
@@ -32,6 +32,6 @@
 
 （2）气胸：治疗的主要目的在于将伤侧胸腔内积气排出，使该处恢复正常负压，肺恢复正常膨胀。若闭合性气胸而胸腔积气较少，不需特殊处理，让患者卧床休息，胸腔内空气将会自行吸收，如果积气较多，为了减轻气体对肺和纵膈的压迫，促进肺的扩张，可自第2〜3肋间，即胸前锁骨正中线处，在无菌操作和局麻下行胸腔穿刺抽出积气。若有胸膜渗液或血液积留时，可在腋中线或腋后线上第7〜8肋间做穿刺术抽出积液。对开放性气胸，应在急救时可用大块多层无菌纱布或凡士林纱布覆盖封闭伤口，外用绷带包扎，阻止胸腔内与外界空气沟通，然后，在手术室进行清创术；如合并内脏损伤者应先处理脏器损伤，再处理骨折，若无并发内脏损伤者要去除异物、碎骨片和部分失去活力的胸壁软组织，尖锐的骨断端也应修剪去一部分，以免刺伤软组织。是否改引流术则视胸膜腔污染情况而定，缝合伤口后按闭合性气胸处理。术后服祛瘀、清热解毒药或抗菌素药物预防感染。对张力性气胸应于急救时在前胸第2〜3肋间插一针头排气，暂时降低胸腔内压力，以后插入引流管进行水封瓶引流。
 
-（3）血胸：一般性血胸胸膜腔内小量积血（400毫升以下），可自行吸收，可用中药止血活瘀法加以促进；若积血量较多，须及早作胸腔穿刺，排出积血，使肺及早扩张。对进行性血胸应争取时机，在抗休克并给予静脉或动脉内输血的同时，积极，准备剖胸检查，妥善处理出血点，有效地控制出血。对非进行性血胸可于伤后12～24小时后施行胸腔穿刺术，在腋中线第6〜7肋间抽吸出积血，一次尽量多抽，但一般一次不超1500毫升。如有胸痛咳嗽，则应停止抽吸，如积血较多，可分几次吸出，每日一次，每次抽吸后应注入青霉素20万单位。疑有胸部内脏损伤或严重血胸须手术止血者，转胸部外科处理，对感染性血胸，尽早作胸腔穿刺或闭式引流术，彻底排脓，消灭脓腔，促使肺膨胀，并用中药清热解毒法或抗菌素类药物。
+（3）血胸：一般性血胸胸膜腔内小量积血（400毫升以下），可自行吸收，可用中药止血活瘀法加以促进；若积血量较多，须及早作胸腔穿刺，排出积血，使肺及早扩张。对进行性血胸应争取时机，在抗休克并给予静脉或动脉内输血的同时，积极，准备剖胸检查，妥善处理出血点，有效地控制出血。对非进行性血胸可于伤后12～24小时后施行胸腔穿刺术，在腋中线第6〜7肋间抽吸出积血，一次尽量多抽，但一般一次不超1,500毫升。如有胸痛咳嗽，则应停止抽吸，如积血较多，可分几次吸出，每日一次，每次抽吸后应注入青霉素20万单位。疑有胸部内脏损伤或严重血胸须手术止血者，转胸部外科处理，对感染性血胸，尽早作胸腔穿刺或闭式引流术，彻底排脓，消灭脓腔，促使肺膨胀，并用中药清热解毒法或抗菌素类药物。
 
 2.内治法：伤气型宜理气止痛，佐以活血化瘀，可选用理气止痛汤、柴胡疏肝散、金铃子散等。伤血型宜活血化瘀，佐以理气止痛，可选用和营止痛汤、复元活血汤等，痛甚可加云南白药或三七等。气血两伤型，无论有无肋骨骨折，早期宜活血化瘀、理气止痛并重，可用理气止痛汤合复元活血汤加减。有肋骨骨折中期可选用接骨丹、接骨片等。胸胁陈伤可选用三棱和伤汤，黎洞丸、柴胡疏肝散、八珍汤等。
