update ok/wk/wk15-0.5.0.0.0.md. 1.原文有“患肢可凹性永肿”，应为“患肢可凹性水肿”，电子版已改。

--- a/ok/wk/wk15-0.5.0.0.0.md
+++ b/ok/wk/wk15-0.5.0.0.0.md
@@ -32,7 +32,7 @@
 
 （四）外治法
 
-1.疮面有腐肉的用红油膏、九一丹外敷；疮面肉芽始长时，用白玉膏、生肌散外敷，每日1次。
+1.疮面有腐肉的用红油膏、九一 丹外敷；疮面肉芽始长时，用白玉膏、生肌散外敷，每日1次。
 
 2.缠缚疗法：外用上述药物之后，再用阔绷带缠缚患处和整个小腿，1〜2日换药1次。疮面周围伴有湿疮的，改用青黛膏。
 
@@ -52,7 +52,7 @@
 
 〔应用例案〕
 
-高XX，男，55岁，1980年8月5日初诊。右小腿溃烂不愈一年，多种药物治疗不效。患肢可凹性永肿，右小腿内踝上方溃疡面积7X2厘米，边缘不规则，表面覆盖灰白色脓性分泌物，肉芽晦暗，周围皮肤暗紫红色。脉弦缓，舌体胖，质红绛，苔薄白。证属蕴湿下注，气血失和。治以理血除湿，利水消肿。方用丹参、丹皮、土炒全当归、土炒白术、木通、木瓜、茵陈蒿、生黄柏、生苡米、生扁豆、车前草、川萆薢、生甘草。外敷紫草疽疮膏（轻粉9克、红粉9克、琥珀9克、乳香粉9克、血竭9克、冰片0.9克、蜂蜡30克、香油120克、煅珍珠粉0.9克。制法：锅内盛油在火上数开后离火，将前五种药粉入油内溶匀，再入蜂蜡使其完全熔化，将冷却时兑入冰片，珍珠面，搅匀成膏，有化腐生肌，煨脓长肉之功）纱布，疮口周围皮肤行引血疗法（即皮肤常规消毒后用三棱针点刺出血）。
+高XX，男，55岁，1980年8月5日初诊。右小腿溃烂不愈一年，多种药物治疗不效。患肢可凹性水肿，右小腿内踝上方溃疡面积7X2厘米，边缘不规则，表面覆盖灰白色脓性分泌物，肉芽晦暗，周围皮肤暗紫红色。脉弦缓，舌体胖，质红绛，苔薄白。证属蕴湿下注，气血失和。治以理血除湿，利水消肿。方用丹参、丹皮、土炒全当归、土炒白术、木通、木瓜、茵陈蒿、生黄柏、生苡米、生扁豆、车前草、川萆薢、生甘草。外敷紫草疽疮膏（轻粉9克、红粉9克、琥珀9克、乳香粉9克、血竭9克、冰片0.9克、蜂蜡30克、香油120克、煅珍珠粉0.9克。制法：锅内盛油在火上数开后离火，将前五种药粉入油内溶匀，再入蜂蜡使其完全熔化，将冷却时兑入冰片，珍珠面，搅匀成膏，有化腐生肌，煨脓长肉之功）纱布，疮口周围皮肤行引血疗法（即皮肤常规消毒后用三棱针点刺出血）。
 
 二诊：上方17剂后，溃疡面无脓性分泌物，周边有2毫米宽之新生上皮，其外缘有高出皮面的灰白色质硬锁口，周围皮肤仍瘀血。宗上方服药10剂，并及时清除锁口处坏死组织，继用引血疗法，溃疡表面扑撒回阳生肌药粉，然后覆盖黄连膏包扎。
 
