--- a/ok/gk/gk07-0.4.0.0.0.md
+++ b/ok/gk/gk07-0.4.0.0.0.md
@@ -12,7 +12,7 @@
 
 有时腹壁损伤与腹内脏腑损伤很难鉴别，还须仔细诊断严密观察。
 
-2.腹腔内脏破裂伤；可分为有腔脏器穿破和实质脏器破裂两种。
+2.腹腔内脏破裂伤：可分为有腔脏器穿破和实质脏器破裂两种。
 
 （1）有腔脏器穿破：主要表现是腹膜炎，随着胃肠道的内容物进入腹腔，体温继续升高，脉搏逐渐加快，恶心呕吐明显，局部膨胀性疼痛，触痛和腹膜刺激等征象愈益明显，范围逐渐扩大，甚至腹壁板硬。肝浊音界可能缩小或消失，肠蠕动音减弱或消失，腹腔穿刺可获得浑浊液体。X线检査若发现膈下有游离气体则可证明为气腹征。对诊断起决定性意义，如处理不及时可因腹膜炎中毒性休克而死亡。不同的腔脏器穿破会出现不同的证候。
 
@@ -20,7 +20,7 @@
 
 十二指肠穿破如系腹腔内的部分，则临床病象与胃穿破大致相同，若系腹膜后部分破裂，则表现为右上腹部痛、背痛、呕吐、无明显腹膜刺激证，吐出血性物，或出现皮下气肿，无血尿及肾脏损伤征象，X线检查显示腹膜后组织积气，显出肾脏轮廓，沿脊椎旁至膈内侧有透明区，腰大肌阴影模糊不清，则诊断可确定。
 
-小肠破裂：小肠占据腹腔大部分，受伤机会较多，为腹部遭受直接暴力，肠管被挤压在脊柱上而引起肠壁破裂，亦有因肠系膜损伤，影响到部分小肠的血供给而全肠坏死。可产生腹膜刺激和腹膜炎症候，肠鸣音消失，肝浊音减弱或消失，X线检查可见。气腹。早期损伤破裂较剧，出血过多也可出现休克证候。
+小肠破裂：小肠占据腹腔大部分，受伤机会较多，为腹部遭受直接暴力，肠管被挤压在脊柱上而引起肠壁破裂，亦有因肠系膜损伤，影响到部分小肠的血供给而全肠坏死。可产生腹膜刺激和腹膜炎症候，肠鸣音消失，肝浊音减弱或消失，X线检查可见气腹。早期损伤破裂较剧，出血过多也可出现休克证候。
 
 结肠破裂：结肠破裂有其一定的特殊性，升结肠和降结肠位置较固定，而且部分肠壁在腹膜外，有时只伤及腹膜外部分，如检查不仔细，可能不被发现，这种部位受伤可引起严重的腹膜后感染，且容易扩散。结肠壁较薄，血运较差，愈合能力不如小肠。结肠内容物较干，含细菌甚多，感染力较小肠内含物为强，但刺激性则较少。左侧结肠尤为如此。早期症状可能不严重，但感染的危险性很大，须加注意仔细检查。
 
