update ok/fjx/fjx10-0.5.0.0.0.md. 第一行“木通【〈】10克）”改为（

--- a/ok/fjx/fjx10-0.5.0.0.0.md
+++ b/ok/fjx/fjx10-0.5.0.0.0.md
@@ -1,6 +1,6 @@
 ## 八正散《太平惠民和剂局方》
 
-〔组成〕车前子（12克） 瞿麦（12克）萹蓄（12克） 滑石（12克） 山栀子仁（10克） 甘草炙（10克） 木通〈10克） 大黄面裹煨，去面切，焙（5克)，古代用量各一斤。
+〔组成〕车前子（12克） 瞿麦（12克）萹蓄（12克） 滑石（12克） 山栀子仁（10克） 甘草炙（10克） 木通（10克） 大黄面裹煨，去面切，焙（5克)，古代用量各一斤。
 
 〔煎服法〕上为散，每服二钱，水一盏，入灯芯煎至七分，去滓温服，食后临卧。小儿量力与之（现代用法：为散，每服6至9克；亦可作汤剂，水煎服，用量按原方比例酌情增减）。
 
