--- a/ok/bc/bc02-0.3.6.0.0.md
+++ b/ok/bc/bc02-0.3.6.0.0.md
@@ -1,6 +1,6 @@
 ### 牵牛子
 
-〔原文〕**辛热有毒，属火善走。入肺经，泻气分之湿热，**肺主气，火能平金而泻肺。**能达右肾命门，走精隧，通下焦郁遏，及大肠风秘**(1)**气秘**(2)，**利大小便，逐水消痰，杀虫堕胎。治水肿喘满，痃癖**(3)**气块。若湿热在血分，胃弱气虚人禁用**东坦曰：牵牛苦寒误矣。其味辛味，久嚼猛烈雄壮，所谓苦寒安在哉，乃泻气之药，比诸辛药泄气尤甚。若湿从下受，下焦主血，血中之湿，宜苦寒之味，而反用辛热之药，泄上焦之气，是血病泻气，使气血俱损也，王好古曰：以气药引，则入气；以大黄引，则入血。时珍曰：一妇肠结，年几六十，服养血润燥药，则泥结，服硝黄药，则若罔知，如此三十余年，其人体肥膏梁而多郁，日吐酸痰乃宽。此乃三焦气滞，有升无降，津液皆化为痰，不能下润肠腑，非血燥也。润剂留滞，硝黄入血，不能入气，故无效。用牵牛为末，皂角膏丸，才服便通，外甥素多酒色病，二便不通，胀痛呻呤七昼夜，用通利药不效，予言此乃湿热之邪在精道，隧路壅塞，病在二阴之间，故前阻小便，后阻大便，病不在大肠膀胱也。用楝实、茴香、穿山甲诸药，倍牵牛，三服而平。东垣补下焦阳虚，天真丹用牵牛盐水炒黑，佐沉香、杜仲、肉桂、破故纸诸药，深得补泻兼施之妙，**有黑白二种，黑者**亦名黑丑。**力速。取子淘去浮者，舂去皮用。得木香、干姜良。**此药汉前未入本草，故仲景方中无此。《別录》始载之，宋后始多用者。 
+〔原文〕**辛热有毒，属火善走。入肺经，泻气分之湿热，**<small>肺主气，火能平金而泻肺。</small>**能达右肾命门，走精隧，通下焦郁遏，及大肠风秘**(1)**气秘**(2)，**利大小便，逐水消痰，杀虫堕胎。治水肿喘满，痃癖**(3)**气块。若湿热在血分，胃弱气虚人禁用**<small>东垣曰：牵牛苦寒误矣。其味辛味，久嚼猛烈雄壮，所谓苦寒安在哉，乃泻气之药，比诸辛药泄气尤甚。若湿从下受，下焦主血，血中之湿，宜苦寒之味，而反用辛热之药，泄上焦之气，是血病泻气，使气血俱损也，王好古曰：以气药引，则入气；以大黄引，则入血。时珍曰：一妇肠结，年几六十，服养血润燥药，则泥结，服硝黄药，则若罔知，如此三十余年，其人体肥膏梁而多郁，日吐酸痰乃宽。此乃三焦气滞，有升无降，津液皆化为痰，不能下润肠腑，非血燥也。润剂留滞，硝黄入血，不能入气，故无效。用牵牛为末，皂角膏丸，才服便通，外甥素多酒色病，二便不通，胀痛呻呤七昼夜，用通利药不效，予言此乃湿热之邪在精道，隧路壅塞，病在二阴之间，故前阻小便，后阻大便，病不在大肠膀胱也。用楝实、茴香、穿山甲诸药，倍牵牛，三服而平。东垣补下焦阳虚，天真丹用牵牛盐水炒黑，佐沉香、杜仲、肉桂、破故纸诸药，深得补泻兼施之妙，</small>**有黑白二种，黑者**<small>亦名黑丑。</small>**力速。取子淘去浮者，舂去皮用。得木香、干姜良。**<small>此药汉前未入本草，故仲景方中无此。《別录》始载之，宋后始多用者。<small>
 
 【讲解】 (1)风秘：由于风搏肺脏，传于大肠，津液干燥所致的大便秘结。(2)气秘：因气滞或气虚所致的便秘，这里指前者。(3)痃癖：古病名。与积聚相类，是脐腹部或胁腹部患有癖块的泛称。
 
