update ok/fjx/fjx04-0.1.0.0.0.md. 本方主治阳明经证（气分实热证),  ,改为，

--- a/ok/fjx/fjx04-0.1.0.0.0.md
+++ b/ok/fjx/fjx04-0.1.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔服法〕原方四味，以水一斗，煮米熟汤成，去渣，温服一升，日三服。（水煎至米熟汤成，去渣温服）
 
-〔讲解〕本方主治阳明经证（气分实热证),为清胃热祖方。白虎为西方之神，西方主秋，秋主寒凉肃杀之气，时到秋季，炎暑渐退，故取“白虎”名汤，喻本方有清热之效。伤寒邪传阳明经，或温邪传入气分。正盛邪实，故出现身大热、口大渴、汗大出、脉洪大四大症。邪热炽盛，循阳明经上行，故见头痛、面赤；邪热入里，故不恶寒反恶热；里热熏蒸，故身大热；热逼津泄，故大汗出；热灼胃津，故烦渴、口干舌燥；邪盛于经，故脉洪大有力。本方证适用于阳明热盛，但未见阳明腑实，不宜用“釜底抽薪”法；同时由于燥热伤阴，又不宜用芩连苦寒直折更伤其阴之证。方用辛甘大寒之生石膏为君，甘寒泻胃火，生津液，辛能走经表，解肌热，善清阳明气分实热，除热盛之烦躁，是具有内外两解作用。臣以知母苦寒质润，苦以泻火，润以滋躁，清热生津，以治胃热之口渴，石膏配知母清热除烦力强。粳米滋养胃阴为佐。甘草生津和胃为使。两药佐使为用，既可协知母以养阴，又可借甘缓之性，防止石膏、知母寒凉伤胃之弊。四药合用有清热生津之效，气热得清，则一般所谓“四大”症，（大热、大汗、大烦渴、脉洪大）即解。本方配伍得当，药简效宏，为优秀古疗之一。
+〔讲解〕本方主治阳明经证（气分实热证)，为清胃热祖方。白虎为西方之神，西方主秋，秋主寒凉肃杀之气，时到秋季，炎暑渐退，故取“白虎”名汤，喻本方有清热之效。伤寒邪传阳明经，或温邪传入气分。正盛邪实，故出现身大热、口大渴、汗大出、脉洪大四大症。邪热炽盛，循阳明经上行，故见头痛、面赤；邪热入里，故不恶寒反恶热；里热熏蒸，故身大热；热逼津泄，故大汗出；热灼胃津，故烦渴、口干舌燥；邪盛于经，故脉洪大有力。本方证适用于阳明热盛，但未见阳明腑实，不宜用“釜底抽薪”法；同时由于燥热伤阴，又不宜用芩连苦寒直折更伤其阴之证。方用辛甘大寒之生石膏为君，甘寒泻胃火，生津液，辛能走经表，解肌热，善清阳明气分实热，除热盛之烦躁，是具有内外两解作用。臣以知母苦寒质润，苦以泻火，润以滋躁，清热生津，以治胃热之口渴，石膏配知母清热除烦力强。粳米滋养胃阴为佐。甘草生津和胃为使。两药佐使为用，既可协知母以养阴，又可借甘缓之性，防止石膏、知母寒凉伤胃之弊。四药合用有清热生津之效，气热得清，则一般所谓“四大”症，（大热、大汗、大烦渴、脉洪大）即解。本方配伍得当，药简效宏，为优秀古疗之一。
 
 〔临床应用〕本方为治阳明经热（气分热盛），而以大热、大汗、大烦渴、脉洪大为辨证要点。但四大证不一定具全，凡属无形热炽均可应用。
 
