update ok/wk/wk06-1.4.0.0.0.md. 修改了错别字。。。。。

--- a/ok/wk/wk06-1.4.0.0.0.md
+++ b/ok/wk/wk06-1.4.0.0.0.md
@@ -94,6 +94,6 @@
 
 1.《灵枢•痈疽篇》：“热气淳盛，下陷肌肤，筋髓枯，内连五脏，血气竭，当其痈下，筋骨良肉皆无余，故名曰疽。”
 
-2.《外科精要•卷上》愚按：“热毒蕴于内，大便秘结，元气无亏者，宜用大黄等药泄其热毒。…若疮不焮肿，不作脓者，虽未溃，仍须温补。若疮已溃，而肿不退，痛不止者，仍宜清凉之剌治之。”…大抵肿高焮痛，脓水稠粘者，元气未损也，治之则易。漫肿微痛，脓水清稀者，元气虚弱也，治之则难。”
+2.《外科精要•卷上》愚按：“热毒蕴于内，大便秘结，元气无亏者，宜用大黄等药泄其热毒。…若疮不焮肿，不作脓者，虽未溃，仍须温补。若疮已溃，而肿不退，痛不止者，仍宜清凉之剂治之。”…大抵肿高焮痛，脓水稠粘者，元气未损也，治之则易。漫肿微痛，脓水清稀者，元气虚弱也，治之则难。”
 
 3.《外科理例•卷一》：“疮名有三：曰疖、曰痈、曰疽十九”，对疽之症状，病变发展过程及不同类型的证治，论述全面，观察细致，有独到之处，可供参考。
