update ok/qs/qs03_11.md. 错字

--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -84,7 +84,7 @@
 
 人参胡桃汤由人参、胡桃、生姜等三味药组成，功能纳气平喘，主治动则喘息，不能平卧。
 
-**8.升阳益胃汤**(《牌胃论》)
+**8.升阳益胃汤**(《脾胃论》)
 
 **内伤升阳益胃汤，湿多热少抑清阳，**
 
@@ -96,11 +96,11 @@
 
 **9.参麦汤**(《湿热病篇》)
 
-**气液两亏宜清补，当推薜氏参麦汤，**
+**气液两亏宜清补，当推薛氏参麦汤，**
 
 **参麦瓜斛草莲谷，肺气胃津两复方**。
 
-**薜氏** 指清代医学家薜生白。 
+**薛氏** 指清代医学家薛生白。 
 
 本方由人参、麦冬、木瓜、石斛、甘草、鲜莲子、谷芽等七味药组成。功能补气养阴，扶胃益肺。主治气液两亏之倦怠不思食，唇齿干而小便频数等症。
 
@@ -298,7 +298,7 @@
 
 **襄** xiang，读香，帮助。
 
-本方由生地黄、北沙参、枸杞子、麦门冬、当归、川楝等六味药组成。功能滋养肝肾。主治腰痛咽干，肋痛、阴囊肿痛等证。
+本方由生地黄、北沙参、枸杞子、麦门冬、当归、川楝等六味药组成。功能滋养肝肾。主治腰痛咽干，胁痛、阴囊肿痛等证。
 
 **25.酸枣仁汤**
 
@@ -318,7 +318,7 @@
 
 **燥痰桑贝湿苓半，阿胶咳血骨热深。**
 
-本方由牡丹皮、当归、麦门冬、甘草、蔻苡仁、白芍、北五味、人参、莲子、橘红、生地黄、大枣等十二味药组成。功能滋阴降火，健脾益气。主治皮面冷而内热如蒸、咳嗽短气、倦怠少气等证。不寐加枣仁；燥痰加桑皮、贝母；湿痰加茯苓、半夏；骨蒸劳热，咳痰带血加阿胶。
+本方由牡丹皮、当归、麦门冬、甘草、薏苡仁、白芍、北五味、人参、莲子、橘红、生地黄、大枣等十二味药组成。功能滋阴降火，健脾益气。主治皮面冷而内热如蒸、咳嗽短气、倦怠少气等证。不寐加枣仁；燥痰加桑皮、贝母；湿痰加茯苓、半夏；骨蒸劳热，咳痰带血加阿胶。
 
 **27.补肺阿胶汤（附：月华丸）**
 
@@ -332,13 +332,13 @@
 
 **獭**ta，读塔，动物名，水獭。
 
-本方由阿胶、马兜铃、炙甘草、鼠沽子（牛蒡子）、杏仁、糯米等六味药组成。功能补肺止咳。主治肺虚咳嗽，痰粘不易咯出，咽中气梗等证。
+本方由阿胶、马兜铃、炙甘草、鼠粘子（牛蒡子）、杏仁、糯米等六味药组成。功能补肺止咳。主治肺虚咳嗽，痰粘不易咯出，咽中气梗等证。
 
 月华丸由天门冬、麦门冬、生地黄、熟地黄、山药、百部、川贝母、白茯苓、白菊花、沙参、阿胶、三七、桑叶、獭肝等十四味药组成。功能滋阴润肺。主治阴虚燥热，久咳不已之肺痨病。
 
 **28.石斛夜光丸**
 
-**石斟夜光枳膝芎，二地二冬杞丝苁，**
+**石斛夜光枳膝芎，二地二冬杞丝苁，**
 
 **青箱草决犀羚药，参味连芩蒺草风。**
 
@@ -346,7 +346,7 @@
 
 ### [补阳]
 
-**29.肾气丸（附：济生肾气九、十补丸）**
+**29.肾气丸（附：济生肾气丸、十补丸）**
 
 **金匮肾气治肾虚，熟地淮药及山萸，**
 
