--- a/ok/bc/bc02-0.3.7.0.0.md
+++ b/ok/bc/bc02-0.3.7.0.0.md
@@ -1,6 +1,6 @@
 ### 商陆
 
-〔原文〕**苦寒有毒，**诸家辛酸，时珍苦寒。**沉阴下行，与大戟、甘遂同功。疗水肿胀满，**肿属脾，胀属肝。肿则阳气犹行，如单胀而不肿者名臌胀，为木横克土，难治。肿胀朝宽暮急有血虚；朝暮俱急，为气血两虚。肿胀由心腹而散四肢者吉；由四肢两入心腹者危。男自下而上，女自上而下，皆难治。**瘕疝痈肿，喉痹不通，**薄切醋炒，涂喉中良。**湿热之病。泻蛊毒，敷恶疮，堕胎孕，令人见鬼神。取花白者良。**赤者伤人，只堪贴脐，入麝三分捣贴，小便利则肿消。**黑豆汤浸蒸用。得蒜良。**
+〔原文〕**苦寒有毒，**<small>诸家辛酸，时珍苦寒。</small>**沉阴下行，与大戟、甘遂同功。疗水肿胀满，**<small>肿属脾，胀属肝。肿则阳气犹行，如单胀而不肿者名臌胀，为木横克土，难治。肿胀朝宽暮急有血虚；朝暮俱急，为气血两虚。肿胀由心腹而散四肢者吉；由四肢两入心腹者危。男自下而上，女自上而下，皆难治。</small>**瘕疝痈肿，喉痹不通，**<small>薄切醋炒，涂喉中良。</small>**湿热之病。泻蛊毒，敷恶疮，堕胎孕，令人见鬼神。取花白者良。**<small>赤者伤人，只堪贴脐，入麝三分捣贴，小便利则肿消。</small>**黑豆汤浸蒸用。得蒜良。**
 
 【讲解】**商陆功专泻下逐水。**为商陆科多年生草本植物商陆的根。切片、晒干，醋制用。
 
