update ok/qs/qs03_13.md. 九仙散，“粟壳阿胶冬五味”，其中的“冬”应为款冬花，教材中写的是“麦门冬”，特此说明。

--- a/ok/qs/qs03_13.md
+++ b/ok/qs/qs03_13.md
@@ -18,7 +18,7 @@
 
 **粟壳阿胶冬五味，敛肺止咳气能增。**
 
-本方由乌梅，人参，桔梗，桑白皮，贝母，罂粟壳，阿胶，麦门冬，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虚劳喘咳，日久不愈，夜间为甚。
+本方由乌梅，人参，桔梗，桑白皮，贝母，罂粟壳，阿胶，款冬花，五味子等九味药组成。功能补虚扶正，敛肺止咳。主治虚劳喘咳，日久不愈，夜间为甚。
 
 ### **【涩肠固脱】**
 
