--- a/ok/wk/wk14-0.10.0.0.0.md
+++ b/ok/wk/wk14-0.10.0.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-房室过度是血精的主要原因，肾阴不足，相水偏旺，扰动精室，迫血妄行，是主要病变机理。肾阴亏损，可因先天不足，或因强力入房伤肾。亦有兼困湿热下注，循经入扰精室，血热妄行所致。
+房室过度是血精的主要原因，肾阴不足，相火偏旺，扰动精室，迫血妄行，是主要病变机理。肾阴亏损，可因先天不足，或因强力入房伤肾。亦有兼困湿热下注，循经入扰精室，血热妄行所致。
 
 〔辨证论治〕
 
