--- a/ok/qs/qs03_14.md
+++ b/ok/qs/qs03_14.md
@@ -10,7 +10,7 @@
 
 **鞠** ju，读居。 
 
-本方由苍术，香附，川芎，神曲，扼子等五味药组成。功能行气解郁，消积止痛。主治气，血，痰，火，湿，食等郁结所致的胸膈满闷，脘腹胀痛，吞酸呕吐，饮食不化等证。
+本方由苍术，香附，川芎，神曲，栀子等五味药组成。功能行气解郁，消积止痛。主治气，血，痰，火，湿，食等郁结所致的胸膈满闷，脘腹胀痛，吞酸呕吐，饮食不化等证。
 
 **2.半夏厚朴汤**
 
@@ -38,7 +38,7 @@
 
 **瓜蒌薤白治胸痹，配以白酒最相宜，**
 
-**加夏加朴枳桂投，治症稍殊名亦导。**
+**加夏加朴枳桂枝，治症稍殊名亦导。**
 
 本方由瓜蒌实，薤白，白酒等三味药组成。功能通阳散结。主治气滞痰阻之胸痹证。
 
@@ -134,7 +134,7 @@
 
 本方由旋复花，代赭石，人参，生姜，半夏，炙甘草，大枣等七味药组成。功能降逆和胃，主治心下痞满、噫气不止，以及反胃呕吐等症。
 
-**14.橘皮竹茹汤（附：济生橘皮竹茄汤、新制橘皮竹茹汤〉**
+**14.橘皮竹茹汤（附：济生橘皮竹茹汤、新制橘皮竹茹汤〉**
 
 **橘皮竹茹治呕呃，参甘姜枣效力捷，**
 
