--- a/ok/bc/bc02-0.3.8.0.0.md
+++ b/ok/bc/bc02-0.3.8.0.0.md
@@ -1,6 +1,6 @@
 ### 续随子
 
-〔原文〕**辛温有毒，行水破血。治癥瘕痰饮，冷气胀满，蛊毒鬼疰**(1)**。利大小肠，下恶滞物，涂疥癣疮。**玉枢丹用之，治百病多效。《经疏》曰：乃以毒治毒之功。**去壳，取色白者压去油用。**时珍曰：续随子、大戟、泽漆、甘遂，茎叶相似，主疗亦相似，长于利水，用之得法，皆要药也。
+〔原文〕**辛温有毒，行水破血。治癥瘕痰饮，冷气胀满，蛊毒鬼疰**(1)**。利大小肠，下恶滞物，涂疥癣疮。**<small>玉枢丹用之，治百病多效。《经疏》曰：乃以毒治毒之功。</small>**去壳，取色白者压去油用。**<small>时珍曰：续随子、大戟、泽漆、甘遂，茎叶相似，主疗亦相似，长于利水，用之得法，皆要药也。</small>
 
 [讲解]  (1)鬼疰：即痨瘵。是指具有传染性的慢性消耗性疾病。如现代医学之结核病。
 
