update ok/qs/qs03_16.md. 错字

--- a/ok/qs/qs03_16.md
+++ b/ok/qs/qs03_16.md
@@ -48,7 +48,7 @@
 
 本方去木香，加防风、全蝎、独活、甘草、名大省风汤，功能祛风通痹，主治中风，猝然仆倒，眩晕痰多，四肢抽搐，并治历节痛。
 
-青州白丸由三生饮去木香，附子易白附子，再加半夏组成。主治中风手足抽描，口中涎痰多。
+青州白丸由三生饮去木香，附子易白附子，再加半夏组成。主治中风手足抽搐，口中涎痰多。
 
 **4.牵正散**
 
@@ -146,7 +146,7 @@
 
 **贝草竹茹同芍药，肝风内动急煎尝。**
 
-**钩藤钦用羚羊角，全蝎参麻炙草酌，**
+**钩藤饮用羚羊角，全蝎参麻炙草酌，**
 
 **小儿急惊牙关紧，手足抽搐效验卓。**
 
@@ -188,7 +188,7 @@
 
 **麦龟膝草龙川楝，肝风内动有奇功。**
 
-本方由牛膝、生赭石、生龙骨、生牡蛎、生龟板、生白芍、玄参、天冬、川楝、生麦芽、茵陈、甘草等十二味药组成，功能镇肝熄风、主治头昏目眩，耳呜脑胀等症。
+本方由牛膝、生赭石、生龙骨、生牡蛎、生龟板、生白芍、玄参、天冬、川楝、生麦芽、茵陈、甘草等十二味药组成，功能镇肝熄风、主治头昏目眩，耳鸣脑胀等症。
 
 **15.地黄饮子**
 
