--- a/ok/gk/gk03-0.2.2.0.0.md
+++ b/ok/gk/gk03-0.2.2.0.0.md
@@ -2,7 +2,7 @@
 
 问诊在骨伤科诊断上有特殊的意义，一定方向和强度的暴力及受伤时的姿势，决定发生某种损伤。如50岁以上的老人，侧身向后摔倒，最容易发生股骨颈骨折；若由高处摔下，两足或臀部着地，常发生脊椎压缩性骨折等。骨伤科的问诊除与内科相同，了解一般情况和既往史、个人史及家族史外，重点要询问以下几个方面：
 
-1.问受伤原因：了解受伤原因，受伤部位以及受伤时的体位、姿势、暴力大小及方向等。如滑倒坐地，常出现尾部损伤；踝关节损伤，多为内翻性或外翻性损伤，轻者伤筋，重者撕脱骨折，更严重者造成双踝或三踝骨折；由高处坠下，足跟着地，多见跟骨骨折；矿井下塌方砸伤，常是脊椎压缩骨折；成年人摔倒，以手按地，多见桡骨远端典型的骨折。
+1.问受伤原因：了解受伤原因，受伤部位以及受伤时的体位、姿势、暴力大小及方向等。如滑倒坐地，常出现骶尾部损伤；踝关节损伤，多为内翻性或外翻性损伤，轻者伤筋，重者撕脱骨折，更严重者造成双踝或三踝骨折；由高处坠下，足跟着地，多见跟骨骨折；矿井下塌方砸伤，常是脊椎压缩骨折；成年人摔倒，以手按地，多见桡骨远端典型的骨折。
 
 2.问受伤时间：新伤多属实证，易于治疗；陈伤多属虚证，较难医治。损伤的临床症状是随时间而变化的，根据时间变化去分析证候，易于正确诊断。
 
@@ -12,7 +12,7 @@
 
 还应问清疼痛及麻木情况，通常说：“疼轻麻重木难医”。若伤后先疼，继而麻木尚好医治；若伤即麻木者，则难医治。形伤痛点固定，气伤痛无定处。一般情况下，伤后一、二日，疼痛开始缓解，若疼痛持续加重，则为伴有并发症的征兆。骨折或脱位后，患肢功能活动一般是立刻丧失，而伤筋后还能勉强维持一定的功能活动，经过一个短暂的时间，随着患处肿胀的发展而功能丧失，又随着肿胀的消退而恢复功能活动。
 
-4.问治疗经过：治疗过程与效果如何，对取得正确诊断可提供有益参考。可避免不必要的探索，从而为选择治疗方案提供依据。另外，对危重急诊患者，应先抓住主要问题询问，以便从速釆取抢救措施，待患者病情缓解后，再作详细问诊；若患者神志不清，或不能言语者，应请陪人代诉。
+4.问治疗经过：治疗过程与效果如何，对取得正确诊断可提供有益参考。可避免不必要的探索，从而为选择治疗方案提供依据。另外，对危重急诊患者，应先抓住主要问题询问，以便从速采取抢救措施，待患者病情缓解后，再作详细问诊；若患者神志不清，或不能言语者，应请陪人代诉。
 
 #### 附：骨伤症问病歌：
 
