--- a/ok/gk/gk03-0.2.3.0.0.md
+++ b/ok/gk/gk03-0.2.3.0.0.md
@@ -1,10 +1,10 @@
 ### 三、闻诊
 
-《难经》说：“闻而知之者，闻其五音，以别其病。”闻诊的范围，除耳闻以外，还包括鼻嗅。在昕觉方面，要听患者的语言、呻吟、呼吸、咳嗽声音的高低清浊等，以分辨寒热虚实。一般气衰语言低微，为正气虚；气粗语声响亮，为邪气实；语无伦次，前后不相应，多是神志已乱；妄言谵语骂言，不避亲疏者，多是痰热蒙蔽心窍。呼吸气粗多挟邪热，呼吸气微多是虚寒。在嗅觉方面，闻患者的病气、呼吸、痰脓、二便以及汗津的气味，以辨别其病情。一般来说，腥秽臭浊之气为热；个别疾病有特异的气味，如胸部内伤肺部有瘀血的患者，其呼吸常常有血腥味；外伤后气滞血阻而致肌肉坏死的患者，有一种特殊的恶臭气。在骨伤科闻诊辨证中尤应检查以下几个方面：
+《难经》说：“闻而知之者，闻其五音，以别其病。”闻诊的范围，除耳闻以外，还包括鼻嗅。在听觉方面，要听患者的语言、呻吟、呼吸、咳嗽声音的高低清浊等，以分辨寒热虚实。一般气衰语言低微，为正气虚；气粗语声响亮，为邪气实；语无伦次，前后不相应，多是神志已乱；妄言谵语骂言，不避亲疏者，多是痰热蒙蔽心窍。呼吸气粗多挟邪热，呼吸气微多是虚寒。在嗅觉方面，闻患者的病气、呼吸、痰脓、二便以及汗津的气味，以辨别其病情。一般来说，腥秽臭浊之气为热；个别疾病有特异的气味，如胸部内伤肺部有瘀血的患者，其呼吸常常有血腥味；外伤后气滞血阻而致肌肉坏死的患者，有一种特殊的恶臭气。在骨伤科闻诊辨证中尤应检查以下几个方面：
 
 1.听患者声息：气粗，语言声低，出言迟懒者，多是胸部或腹部有重伤；气微，语言声低，心烦意乱，多是亡血重症或重伤气脱之征；若咽有曳锯之声，多是肺内瘀血严重或重伤肺绝之候。
 
-2.听骨摩擦音；骨摩擦音是骨折的主要症状之一。正如《伤科补要》所说：“骨若全断，动则辘辘有声，如骨损未断，动则无声，或有零星败骨在内，动则淅淅之声”。所以骨摩擦音不仅可以借以用来诊断骨折，而且以骨摩擦音的不同音响，还可以提示骨折可能属于何种类型。骨摩擦音清脆短小者，则多见于斜形骨折；若骨摩擦音短小较多而连续出现者，则多见粉碎性骨折；若骨摩擦音声响较大，间或夹杂短小响声者，则多见于横断骨折。骨摩擦音出现处，即为骨折处。裂纹骨折、劈裂骨折，嵌插骨折及分离骨折均无骨摩擦音。骨摩擦音多数是患者告知，或医者触诊检查时感觉到。但应注意检查时不能为追求骨摩擦音而增加患者的痛苦。骨摩擦音对完全骨折的诊断是十分确切的依据。如肋骨无移位骨折的早期，x线尚未发现时，触诊检查中若有骨摩擦音或骨摩擦感，即可确诊。
+2.听骨摩擦音：骨摩擦音是骨折的主要症状之一。正如《伤科补要》所说：“骨若全断，动则辘辘有声，如骨损未断，动则无声，或有零星败骨在内，动则淅淅之声”。所以骨摩擦音不仅可以借以用来诊断骨折，而且以骨摩擦音的不同音响，还可以提示骨折可能属于何种类型。骨摩擦音清脆短小者，则多见于斜形骨折；若骨摩擦音短小较多而连续出现者，则多见粉碎性骨折；若骨摩擦音声响较大，间或夹杂短小响声者，则多见于横断骨折。骨摩擦音出现处，即为骨折处。裂纹骨折、劈裂骨折，嵌插骨折及分离骨折均无骨摩擦音。骨摩擦音多数是患者告知，或医者触诊检查时感觉到。但应注意检查时不能为追求骨摩擦音而增加患者的痛苦。骨摩擦音对完全骨折的诊断是十分确切的依据。如肋骨无移位骨折的早期，x线尚未发现时，触诊检查中若有骨摩擦音或骨摩擦感，即可确诊。
 
 3.听复位声：《伤科补要〉说：“凡上骱时，骱内必有响声活动，其骱已上。若无响声活动者，其骱未上也。”这说明脱位复位时的“格得”声，即是上骱成功的信号。但应注意：若“格得”声钝而长，这是节头碰击臼缘音，是未复位的滑脱声响。另外，错缝和半脱位的复位声响，常是治疗性声响。
 
