--- a/ok/bc/bc02-0.3.9.0.0.md
+++ b/ok/bc/bc02-0.3.9.0.0.md
@@ -1,6 +1,6 @@
 ### 泽漆
 
-〔原文〕**辛苦微寒。消痰退热，止嗽杀虫，利大小肠。治大腹水肿，益丈夫阴气。生平泽，叶圆黄绿，颇似猫睛，一名猫儿眼睛草，茎中有白汁粘人。**时珍曰：《别录》云是大戟苗，非也。功相类耳。
+〔原文〕**辛苦微寒。消痰退热，止嗽杀虫，利大小肠。治大腹水肿，益丈夫阴气。生平泽，叶圆黄绿，颇似猫睛，一名猫儿眼睛草，茎中有白汁粘人。**<small>时珍曰：《别录》云是大戟苗，非也。功相类耳。</small>
 
 【讲解】**泽漆利水消肿，功类大戟。**为大戟科二年生草本植物泽漆的全草。山沟、路边、湿地皆可生长，叶倒卵形，色黄绿，颇似猫睛，故又名猫儿眼睛草。茎中有白汁可粘人。晒干，生用。
 
