--- a/ok/bc/bc08-0.0.6.0.0.md
+++ b/ok/bc/bc08-0.0.6.0.0.md
@@ -2,7 +2,7 @@
 
 **〔原文〕辛香苦平，入心经。行血下气，安神辟秽，安息诸邪，故名。或云出安息国，一种水安息，最难得，功倍胜。** 
 
-【讲解】	安息香功能开窍回苏，兼有祛痰、活血行气之效。为安息科植物安息香树、越南安息香树树干渗出的香树脂。主要分布在印度尼西亚、苏门答腊、越南、老挝及泰国，我国已发现青山安息香、白叶安息香等植物的香树脂也可作安息香用，主产于广西、云南等地。在夏秋季选生长5 —10年的树株，割数个倒三角口，流出汁液，收取白色香树脂。置阴干保存，原药生用。
+【讲解】 **	安息香功能开窍回苏，兼有祛痰、活血行气之效。** 为安息科植物安息香树、越南安息香树树干渗出的香树脂。主要分布在印度尼西亚、苏门答腊、越南、老挝及泰国。我国已发现青山安息香、白叶安息香等植物的香树脂也可作安息香用，主产于广西、云南等地。在夏秋季选生长5—10年的树株，割数个倒三角口，流出汁液，收取白色香树脂。置阴干处保存，原药生用。
 
 本品味辛苦，性平，归心、脾经。功能开窍、祛痰、行气活血。主用于热病神昏、痰涎壅盛的闭证，或中风痰厥等证，也可用于心腹疼痛。
 
