--- a/ok/wk/wk14.md
+++ b/ok/wk/wk14.md
@@ -10,4 +10,4 @@
 
 2.熟悉水疝的常见证治，熟悉前列腺炎的辨证论治方药。
 
-3.了解前阴所属经络脏腑，及男性前因病常见证候和治疗大法；了解子痈的病因病机和急慢性的治疗方法；了解子痰与其他睾丸疾病的区别、囊痈的特点、脱囊的性质和特点、阴茎痰核的病因及其治疗方药；了解血精的病因及其治疗方法。
+3.了解前阴所属经络脏腑，及男性前阴病常见证候和治疗大法；了解子痈的病因病机和急慢性的治疗方法；了解子痰与其他睾丸疾病的区别、囊痈的特点、脱囊的性质和特点、阴茎痰核的病因及其治疗方药；了解血精的病因及其治疗方法。
