--- a/ok/gk/gk03-0.2.4.0.0.md
+++ b/ok/gk/gk03-0.2.4.0.0.md
@@ -4,11 +4,9 @@
 
 骨伤科的切诊包括诊脉和摸法两个方面。切脉主要是诊其内部气血、脏腑、经络的虚实寒热的变化。摸法主要是了解外力侵入人体所造成损伤的部位、性质、深浅、轻重等情况。
 
-#### （一）切脉 
+#### （一）切脉  骨伤患者常见的脉象有如下几种：
 
-骨伤患者常见的脉象有如下几种：
-
-浮脉 轻按应指，重按之稍减而不罕，举之泛泛而有余。多见于新伤瘀肿，疼痛剧烈，或脑髓震动早期。
+浮脉 轻按应指，重按之稍减而不空，举之泛泛而有余。多见于新伤瘀肿，疼痛剧烈，或脑髓震动早期。
 
 沉脉 轻按不应，重按始得。可见于内伤较重者，腰脊、骨盆损伤，或复杂性或多发性骨折后期，以及瘀血久滞的宿伤等证。
 
@@ -44,13 +42,9 @@
 
 ##### 附：《伤科补要》脉诀
 
-伤科之脉，须知确凿。蓄血之症，脉宜洪大；失血之脉，洪大难握。蓄血在中，牢大却宜，细涩而微，速愈者稀。失血诸症，脉必观芤，缓小可喜，数大甚忧。涩芤缓涩，失血者宜；若数且大，邪胜难医。蓄血脉细，元气必虚，脉症相反，峻猛难施。左手三部，浮紧而弦，外感风寒。右手三部，洪大而实，内伤蓄血，或沉或伏，寒凝气束。乍疏乍数，传变莫度。沉滑而紧，痰瘀之作。浮滑且数，风痰之恶。六脉模糊，吉凶难摸，和缓有神，虽危不哭。
+伤科之脉，须知确凿。蓄血之症，脉宜洪大；失血之脉，洪大难握。蓄血在中，牢大却宜，细涩而微，速愈者稀。失血诸症，脉必观芤，缓小可喜，数大甚忧。涩芤缓涩，失血者宜；若数且大，邪胜难医。蓄血脉细，元气必虚，脉症相反，峻猛难施。左手三部，浮紧而弦，外感风寒。右手三部，洪大而实，内伤蓄血，或沉或伏，寒凝气束。乍疏乍数，传变莫度。沉滑而紧，痰瘀之作。浮滑且数，风痰之恶。六脉模糊，吉凶难摸，和缓有神，虽危不哭。重伤痛极，何妨代脉，可以医疗，不须惊愕。欲知其要，细心习学。
 
-重伤痛极，何妨代脉，可以医疗，不须惊愕。欲知其要，细心习学。
-
-#### （二）摸诊 
-
-摸诊在骨伤科诊断中极为重要，是一种不可缺少的诊法。《正骨心法要旨》说：“摸者，用手细细摸其所伤之处，或骨折、骨碎、骨歪、骨整、骨软、骨硬……筋歪、筋正、筋断、筋走”。《理伤续断方》提岀：“凡损伤处，只须揣摸，骨头平正不平正便可见”。“凡在左右损伤，只相度骨缝，仔细拈捺忖度，便见大概”。对损伤部位认真触摸，可帮助了解损伤的性质，是骨折、脱位，还是筋伤，并能帮助了解骨折的类型和复位的正确与否，还能帮助了解损伤恢复情况，有否再次移位，以及骨折愈合的程度等。
+#### （二）摸诊  摸诊在骨伤科诊断中极为重要，是一种不可缺少的诊法。《正骨心法要旨》说：“摸者，用手细细摸其所伤之处，或骨折、骨碎、骨歪、骨整、骨软、骨硬……筋歪、筋正、筋断、筋走”。《理伤续断方》提岀：“凡损伤处，只须揣摸，骨头平正不平正便可见”。“凡在左右损伤，只相度骨缝，仔细拈捺忖度，便见大概”。对损伤部位认真触摸，可帮助了解损伤的性质，是骨折、脱位，还是筋伤，并能帮助了解骨折的类型和复位的正确与否，还能帮助了解损伤恢复情况，有否再次移位，以及骨折愈合的程度等。
 
 摸法应争取患者的配合，根据望、闻、问三诊所得的情况，有目的地或全身或局部进行检査，常用的有以下几种方法：
 
@@ -62,10 +56,10 @@
 
 （3）切摸疼痛性质及部位：根据压痛的部位、范围及程度，可以辨别是骨伤还是筋伤。一般骨折痛甚，单纯脱位痛轻；骨折压痛有重点，压痛点常是骨折处，筋伤压痛为一片；骨折压痛点消失慢，筋伤压痛随着肿胀消退而消失。
 
-（4）切摸畸形：利用推摸、擒拿、揣探仔细检査骨的形态和关节有否异常，关节间隙是否相合，骨突位置是否正常。若关节部位有凹陷，并在其旁有骨性圆形突起物者，常是脱位；关节周围有一个骨突移位者，常为骨折；骨干处若有高突不平者则为骨折，骨折端横形而齐者，为横断骨折，其骨折端尖者为斜行骨折，有多个断端，或锐形物突出皮下者，为粉碎骨折。
+（4）切摸畸形：利用推摸、擒拿、揣探仔细检查骨的形态和关节有否异常，关节间隙是否相合，骨突位置是否正常。若关节部位有凹陷，并在其旁有骨性圆形突起物者，常是脱位；关节周围有一个骨突移位者，常为骨折；骨干处若有高突不平者则为骨折，骨折端横形而齐者，为横断骨折，其骨折端尖者为斜行骨折，有多个断端，或锐形物突出皮下者，为粉碎骨折。
 
 （5）切摸骨折愈合程度：一助手固定伤肢近端，术者一手持患肢远端，一手持患处，利用术者两手不一致的起伏动作，或左右前后摆动，或旋转患肢，从而测知伤处有无异常活动。在测试过程中，术者持患处的手要来回移动，避免检测段内骨异常活动的遗漏。这种测试活动，术者两手要配合，动作幅度不宜大，活动幅度越小，轻微的骨异常活动才能测知。一般情况下，若只有一侧发软的则为柳枝骨折，或不完全嵌入骨折；若在一个方向上或相对的方向上异常活动轻，而另一个方向或相邻的方向上活动明显，常为长斜性骨折；若各个方向上异常活动都同样明显，多为横断骨折或短斜性骨折；若侧方活动微弱，而旋转活动时相对明显，多为螺旋性骨折。利用本法可以判断骨折临床愈合程度，若骨不能作出异常活动，即达临床愈合。
 
-2.挤压叩击法：用手掌挤压患者伤处的两侧，如发生挤压痛，则表示有骨折存在；如用手掌挤压胸骨，引起肋骨疼痛者，表示有肋骨骨折存在，用两手掌对挤压髂骨翼，引起骨盆内疼痛者，表示有骨盆骨折；另外，沿骨的长轴进行挤压，或叩击引起疼痛者，表示该段骨有骨折；如脊椎伤时，叩击头顶，脊椎伤处疼痛者，多是脊椎骨折。利用上述原理，还可以测试骨折愈合程度，若轴性叩痛消失，即表明骨折已临床愈合。
+2.挤压叩击法：用手掌挤压患者伤处的两侧，如发生挤压痛，则表示有骨折存在；如用手掌挤压胸骨，引起肋骨疼痛者，表示有肋骨骨折存在；用两手掌对挤压髂骨翼，引起骨盆内疼痛者，表示有骨盆骨折；另外，沿骨的长轴进行挤压，或叩击引起疼痛者，表示该段骨有骨折；如脊椎伤时，叩击头顶，脊椎伤处疼痛者，多是脊椎骨折。利用上述原理，还可以测试骨折愈合程度，若轴性叩痛消失，即表明骨折已临床愈合。
 
-3.屈曲旋转法：本法运用于关节处损伤，术者持伤肢作伤肢关节生理范围内活动，如外展内收，外旋内旋、以及伸屈等，以观测关节活动有否障碍。若活动有障碍，而随着活动其耐受程度能改变者，多是筋伤，若活动障碍不能改变者（呈弹性固定〉，多是脱位；若有超正常范围的关节活动，并无弹性固定感者，多是关节内或近关节处骨折。
+3.屈曲旋转法：本法运用于关节处损伤，术者持伤肢作伤肢关节生理范围内活动，如外展内收，外旋内旋、以及伸屈等，以观测关节活动有否障碍。若活动有障碍，而随着活动其耐受程度能改变者，多是筋伤；若活动障碍不能改变者（呈弹性固定〉，多是脱位；若有超正常范围的关节活动，并无弹性固定感者，多是关节内或近关节处骨折。
