--- a/ok/fjx/fjx16-0.3.0.0.0.md
+++ b/ok/fjx/fjx16-0.3.0.0.0.md
@@ -14,6 +14,6 @@
 
 〔临证应用〕本方对于风湿痹痛日久不愈，湿痰死血留滞经络肢体筋脉挛痛，痉痛游走不定。每多用之。
 
-临床运用时若偏于湿盛，加苍术，防己、薏苡仁等祛湿药；偏于风胜，加服大秦艽汤或加防风以增强祛风之力；偏于肝肾气血不足，加服独活寄生汤补肝肾、益气血、祛风湿；偏于寒，重用川乌、草乌以增强祛寒力量；疼痛明显，重用乳香、没药，加强止痛效果。
+临床运用时若偏于湿盛，加苍术、防己、薏苡仁等祛湿药；偏于风胜，加服大秦艽汤或加防风以增强祛风之力；偏于肝肾气血不足，加服独活寄生汤补肝肾、益气血、祛风湿；偏于寒，重用川乌、草乌以增强祛寒力量；疼痛明显，重用乳香、没药，加强止痛效果。
 
 〔文献摘录〕吴琨：“中风手足不用，日久不愈者，经络中有湿痰死血，以方主之。南星之辛烈，所以燥湿痰，二乌之辛热，所以散寒湿，地龙即蚯蚓也，湿土所生，用之者何？易曰：方以类聚，欲其引星与直达湿痰所聚之处，所谓同气相求也，亦《内经》佐以所利，和以所宜之意。邪风注于肢节，久久则血脉凝聚不行，故用乳香，没药以消淤血。”（《医方考》）
