--- a/ok/qs/qs04.md
+++ b/ok/qs/qs04.md
@@ -60,7 +60,7 @@
 
 **喉痹痛在肩前臑，大指次指痛不用。**
 
-**髃**yu，愚，角的意思，此指肩峰部。 **鼽**qiu，球，为鼻流清涕。**衄**nu，育，鼻出血。
+**髃**yú，愚，角的意思，此指肩峰部。 **鼽**qiú，球，为鼻流清涕。**衄**nu，育，鼻出血。
 
 手阳明大肠经：从食指末端商阳穴起，沿食指桡侧缘，出第一、二掌骨间合谷穴，进入两筋之间，沿前臂桡侧，进入肘外侧，经上臂外侧前边，上肩，出肩峰部前边，向上交会颈部（会大椎），下入缺盆（锁骨上窝），络于肺，通过横膈，属于大肠。
 
@@ -100,11 +100,11 @@
 
 **不足身以前皆寒，胃中寒而腹胀壅。**
 
-**頞**e，读遏，鼻梁凹陷部，也叫山根。 **颐**yi，读移，口角后，下颌。 **气街** 指经络之气通行的径路。此处指气冲部，当股动脉博动处。 **髀**bi，读比，即股部，股外为髀。
+**頞**è，读遏，鼻梁凹陷部，也叫山根。 **颐**yí，读移，口角后，下颌。 **气街** 指经络之气通行的径路。此处指气冲部，当股动脉博动处。 **髀**bì，读比，即股部，股外为髀。
 
-**膑**bin，读并，膝盖骨。 **跗**fu，读肤，足背部，同趺。
+**膑**bìn，读并，膝盖骨。 **跗**fū，读肤，足背部，同趺。
 
-**牗**you，读有，窗户。 **贲**ben，读奔，奔响即腹中有气奔冲而响。 **骭**gan，读干，即胫骨。 **胗**zhen，读珍。口唇疮病。 **伏兔** 大腿前正中部。股四头肌隆起如伏兔，故名。
+**牗**yǒu，读有，窗户。 **贲**bēn，读奔，奔响即腹中有气奔冲而响。 **骭**gàn，读干，即胫骨。 **胗**zhēn，读珍。口唇疮病。 **伏兔** 大腿前正中部。股四头肌隆起如伏兔，故名。
 
 足阳明胃经：从鼻旁开始，交会鼻根中，穷边会足太阳经，向下沿鼻外侧，进入上齿槽中，回出来夹口旁环绕口唇，向下交会于颏唇沟承浆穴，退回来沿下颌出面动脉部大迎穴，再沿下颌角颊车穴，上耳前，经颧弓上，沿发际，至额颅即前额角发际部。
 
@@ -114,7 +114,7 @@
 
 此经多气多血。有异常变动就表现为溲溲战抖发冷，喜欢伸腰，屡屡呵欠，颜面暗黑。病发时就厌恶见到別人和火光，听到木器声就惕惕惊慌，独自关闭房门，遮塞窗户而睡。严重的则可能登高而歌，不穿衣服就走。胸膈部响，腹部胀满，小腿部厥冷、麻木、酸痛等症。
 
-本经腧穴能主治有关“血”方面引起的病症，如躁狂、疟疾、温热病，自汗出，鼻塞流涕或出血，口歪，唇生疮疹，颈部肿，喉痛，大腹水肿，膝肿 ;沿着胸前、乳部、气街、腹股沟部、大腿前、小腿外侧、足背上均痛。凡属气盛有余的症状，则身体前面发热，消化强而易饥饿，小便色黄。凡属气虚不足的症状，则身体前面都发冷、寒战，胃部寒冷则感到胀满。
+本经腧穴能主治有关“血”方面引起的病症，如躁狂、疟疾、温热病，自汗出，鼻塞流涕或出血，口㖞，唇生疮疹，颈部肿，喉痛，大腹水肿，膝肿 ;沿着胸前、乳部、气街、腹股沟部、大腿前、小腿外侧、足背上均痛。凡属气盛有余的症状，则身体前面发热，消化强而易饥饿，小便色黄。凡属气虚不足的症状，则身体前面都发冷、寒战，胃部寒冷则感到胀满。
 
 **4.足太阴脾经歌**
 
@@ -136,7 +136,7 @@
 
 **强立股膝内多肿，不能卧因胃不和。**
 
-**核骨** 即第一跖骨小头，形如果核故名。**踝** huai，读怀，胫骨下端的突出处称内踝。**颛** zhuan，读专，小腿肚的腓肠肌。**舌本** 指舌根。  **后与气**   “后”指大便。 “气”指屎气。  **快然衰**  指轻松舒快。  **水闭**  指小便不通等症。
+**核骨** 即第一跖骨小头，形如果核故名。**踝** huái，读怀，胫骨下端的突出处称内踝。**颛** zhuān，读专，小腿肚的腓肠肌。**舌本** 指舌根。  **后与气**   “后”指大便。 “气”指屎气。  **快然衰**  指轻松舒快。  **水闭**  指小便不通等症。
 
 **强立**  作勉强起立解
 
