--- a/ok/fjx/fjx16-0.6.0.0.0.md
+++ b/ok/fjx/fjx16-0.6.0.0.0.md
@@ -10,7 +10,7 @@
 
 用于肝阳头痛，证见头痛多在两太阳部，或全头皆痛，急怒则作，面色红赤或青白，本方可用，若脉弦细而劲，头脑攻痛甚重者，可加生赭石、夏枯草、羚羊粉等。
 
-用于肝风眩晕，其晕甚重，如坐舟船，头中自感轰鸣，劳怒则剧，畏热喜凉，脉多弦大有力，午前较可，午后渐重，可用本方加石决明一至二两，生白芍，杭菊花，珍珠粉等。
+用于肝风眩晕，其晕甚重，如坐舟船，头中自感轰鸣，劳怒则剧，畏热喜凉，脉多弦大有力，午前较可，午后渐重，可用本方加石决明一至二两，生白芍、杭菊花、珍珠粉等。
 
 用于肝热失眠，肝藏魂，肝家热盛，魂不得宁，故夜引不能安寐，本方中栀子、黄芩、凉肝清热，石决明、钩藤，平降肝阳，夜交藤、硃茯神安神志，故可治此类失眠。
 
