--- a/ok/gk/gk03-0.3.4.0.0.md
+++ b/ok/gk/gk03-0.3.4.0.0.md
@@ -2,9 +2,7 @@
 
 （一）正常度数
 
-1.颈部正常活动范圉：颈椎有前屈、后伸、
-
-左右侧屈及旋转等运动。正常伸35°〜45°、屈35°〜45°、右侧屈45°、左侧屈45°，左旋60°〜80°，右旋60°〜80°（图3-1）。
+1.颈部正常活动范围：颈椎有前屈、后伸、左右侧屈及旋转等运动。正常伸35°〜45°、屈35°〜45°、右侧屈45°、左侧屈45°，左旋60°〜80°，右旋60°〜80°（图3-1）。
 
 <img src="img\3-1.jpg" style="zoom:50%;" />
 
