update ok/wk/wk15-0.7.0.0.0.md. 原文有：“冰蛭100克”，应为“水蛭100克”，电子版已改。

--- a/ok/wk/wk15-0.7.0.0.0.md
+++ b/ok/wk/wk15-0.7.0.0.0.md
@@ -94,7 +94,7 @@
 
 〔简便验方〕
 
-1.溶栓散：冰蛭100克、壁虎60克、土元100克、白僵蚕100克、地龙150克、炒穿山甲30克、乌梢蛇60克、玄胡30克，共为细末，每次5克，每日3次。（节选自《脱疽》）
+1.溶栓散：水蛭100克、壁虎60克、土元100克、白僵蚕100克、地龙150克、炒穿山甲30克、乌梢蛇60克、玄胡30克，共为细末，每次5克，每日3次。（节选自《脱疽》）
 
 2.毛冬青120克〜180克，加猪蹄一只或猪骨适量，水煎3〜4小时，每日分三次服完，连服三个月。
 
