--- a/ok/hk/hk1gl01-0.19.0.0.0.md
+++ b/ok/hk/hk1gl01-0.19.0.0.0.md
@@ -1,4 +1,4 @@
-## 紧喉（喉脓肿）
+## 紧喉<small>（喉脓肿）</small>
 
 《潘氏•喉科心法》：“紧喉风、哑瘴喉风、弄舌喉风，此三症，亦缠喉风类也，症候大同小异。因其锁紧咽喉，故名紧喉。因其口紧牙紧，不能出声，故名哑喉。因其舌胀出口不缩，时时搅动，故名弄舌。皆险症也”。根据潘氏叙述，完全符合于喉脓肿。因为喉脓肿是喉的任何一部分的粘膜下面局限性发炎而脓液的积潴，当然可以引起喉头窒息、发音障碍及舌体被挤压等一联串症状了。此外，如《咽喉经验秘传》、《喉科秘旨》等书的缠风，《喉科杓指》的内外肿喉，基本上也有迹近本病。
 
