--- a/ok/gk/gk03-0.3.5.0.0.md
+++ b/ok/gk/gk03-0.3.5.0.0.md
@@ -16,7 +16,7 @@
 
 3.肱二头肌长头紧张试验：令病人肘关节屈曲，前臂旋后时，若引起二头肌结节间沟处疼痛即为阳性，说明有二头肌长头腱鞘炎。
 
-（三）肘部检查法 可诊断肘关节脱位、肱骨髁上移位骨折或先天畸形、肱骨外髁炎症等疾病。
+（三）肘部检查法 可诊断肘关节脱位、肱骨髁上移位骨折或先天畸形、肱骨外上髁炎症等疾病。
 
 1.肘三角：正常人当肘关节屈曲90°时，肱骨内上髁、外上髁与尺骨鹰嘴突，此三点形成一等腰三角形，称为肘三角。当肘关节伸直时，三点在一直线上，称为肘直线。肘关节脱位时，此三角解剖关系改变，三点也不在一条直线上。
 
@@ -24,9 +24,9 @@
 
 3.密耳氏征：令病人将肘部伸直，腕部屈曲，同时将前臂旋前，如肱骨外上髁处感到疼痛即为阳性，对诊断肱骨外上髁炎有参考价值。
 
-（四）髋部检査法可诊断外伤性髋关节脱位、先天性髋脱位、髋关节病理性疾患等。
+（四）髋部检査法 可诊断外伤性髋关节脱位、先天性髋脱位、髋关节病理性疾患等。
 
-1.托马斯氏征：病人仰卧，屈曲其健侧M髋关节，其患侧髋关节会自动屈曲者为阳性，说明患侧髋关节屈曲畸形僵直。
+1.托马斯氏征：病人仰卧，屈曲其健侧髋关节，其患侧髋关节会自动屈曲者为阳性，说明患侧髋关节屈曲畸形僵直。
 
 2.单腿独立试验：嘱病人先使健侧腿单独直立，患侧腿抬起，患侧臀摺向上升即为阴性。再使患侧腿单独直立，健侧腿抬起，健侧臀摺不上升反而下降者阳性，说明患侧臀中肌麻痹或萎缩。
 
@@ -42,7 +42,7 @@
 
 1.抽屉试验：将患肢屈曲约100°位置，检查者双手握住膝部下方（也可用肘关节压住足背固定患肢），向前后推拉，如小腿上端过度向前移位，表示前十字韧带断裂或松弛；如小腿上端过度向后移位，表示后十字韧带松弛或断裂。
 
-2.半月板弹响试验：患者仰卧，检查者一手固定膝部，另一手握住足跟或小腿下端，将膝关节尽量屈曲，然后使小腿内收内旋，同时伸屈膝关节，如有弹响声，说明内侧半月板可能有破裂。反之，小腿外展内旋同时伸屈膝关节时，如有弹响声，说明外侧半月板可能有破裂。膝关节极度屈曲时发生弹响，可考虑为后角破裂。屈曲至90°时发生弹响，则为半月板中央破裂。至于前角破裂，原则上应在膝关节伸直位时发生弹晌。
+2.半月板弹响试验：患者仰卧，检查者一手固定膝部，另一手握住足跟或小腿下端，将膝关节尽量屈曲，然后使小腿内收内旋，同时伸屈膝关节，如有弹响声，说明内侧半月板可能有破裂。反之，小腿外展内旋同时伸屈膝关节时，如有弹响声，说明外侧半月板可能有破裂。膝关节极度屈曲时发生弹响，可考虑为后角破裂。屈曲至90°时发生弹响，则为半月板中央破裂。至于前角破裂，原则上应在膝关节伸直位时发生弹响。
 
 （六）踝部检查法 可诊断韧带损伤、踝关节骨折、脱位等疾病。
 
@@ -50,14 +50,14 @@
 
 2.跟骨叩击试验：检查者以拳击跟骨，如有疼痛发生，说明踝关节有损伤。
 
-3.基恩氏征；踝关节的骨折脱位时，两踝横径增大。
+3.基恩氏征：踝关节的骨折脱位时，两踝横径增大。
 
 （七）腰部检査法 可判断腰骶部病变、椎间盘突出症、坐骨神经痛、肌肉或小关节疾患等。
 
-1.拾物试验：病人拾取地上物件时，仅屈膝与髋，而腰挺直不能弯曲者为阳性，可检査脊柱有无弯曲运动障碍。
+1.拾物试验：病人拾取地上物件时，仅屈膝与髋，而腰挺直不能弯曲者为阳性，可检查脊柱有无弯曲运动障碍。
 
-2.直腿抬高试验：病人仰卧，两下肢伸直，检査者一手扶压膝上以保持膝关节于伸直位，另一手握住踝部将患肢逐渐抬高，在未达70°以前，引起腰部及坐骨神经径路疼痛者为阳性，可确诊为坐骨神经痛。
+2.直腿抬高试验：病人仰卧，两下肢伸直，检查者一手扶压膝上以保持膝关节于伸直位，另一手握住踝部将患肢逐渐抬高，在未达70°以前，引起腰部及坐骨神经径路疼痛者为阳性，可确诊为坐骨神经痛。
 
-3.骨盆挤压与分离试验：病卬卧，检查时将两手按压病人骨盆髂前上棘处，向内挤压或向外分离，如引起骨盆部或骶髂关节部疼痛者为阳性，可确诊为骨盆骨折与骶髂关节疾患。
+3.骨盆挤压与分离试验：病人仰卧，检查时将两手按压病人骨盆髂前上棘处，向内挤压或向外分离，如引起骨盆部或骶髂关节部疼痛者为阳性，可确诊为骨盆骨折与骶髂关节疾患。
 
 4.股神经紧张试验：病人俯卧位，检查者一手将患者骨盆下压固定，一手握患肢踝部，使其伸直或屈曲，强力将大腿向后引伸，如出现大腿前方放射样疼痛，即为阳性。表示可能有股神经根（腰神经<sub>2、3、4</sub>）受压现象。对上腰部椎间盘突出时（腰<sub>1、2、3</sub>）有诊断价值。
