--- a/ok/fjx/fjx16-0.8.0.0.0.md
+++ b/ok/fjx/fjx16-0.8.0.0.0.md
@@ -2,11 +2,11 @@
 
 〔组成〕熟地黄（25克） 巴戟去心（15克） 山茱萸（15克） 石斛（15克） 肉苁蓉酒浸焙（15克） 附子炮（10克） 五味子（10克） 官桂（10克） 白茯苓（15克） 麦门冬去心（15克） 菖蒲（10克） 远志去心（10克） 生姜（5克） 大枣（5克） 薄荷（2克）
 
-注：原方中各药为等分、
+注：原方中各药为等分。
 
 〔煎服法〕水煎服，取上药放入500毫升水中，煮取约250毫升，分二服，早晚各一次。
 
-〔讲解〕本方源于《宣明论方》，主治喑痱证，是由于下元虚衰，虚火上炎，痰浊上泛，堵塞窍道所致。《内经》曰：“虚则补之”、“因其衰而彰之”，故治宜温补下元，开窍化痰。方中熟地山茱萸补益肾阴，壮肾水济心火；巴戟、肉苁蓉、肉桂、附子温养肾阳，其中肉桂更能引火归源；真阴下虚，虚火上炎，心火暴盛，故用石斛、麦门冬滋阴液清虚火，并制桂、附之刚燥；虚火上炎，火动痰生，堵塞窍道，故用菖蒲、远志、茯苓交通心肾，调协水火，开窍化痰；五味子收敛浮阳；姜、枣调和营卫；薄荷利咽。综合本方，上下并治，标本兼顾，而以治下治本为主。诸药合用共奏滋肾阴、补肾阳，开窍化痰之功，使下元得以温养，浮阳得以摄纳，水火相济，虚火得清，痰浊得除，喑痱自愈。
+〔讲解〕本方源于《宣明论方》，主治喑痱证，是由于下元虚衰，虚火上炎，痰浊上泛，堵塞窍道所致。《内经》曰：“虚则补之”、“因其衰而彰之”，故治宜温补下元，开窍化痰。方中熟地、山茱萸补益肾阴，壮肾水济心火；巴戟、肉苁蓉、肉桂、附子温养肾阳，其中肉桂更能引火归源；真阴下虚，虚火上炎，心火暴盛，故用石斛、麦门冬滋阴液清虚火，并制桂、附之刚燥；虚火上炎，火动痰生，堵塞窍道，故用菖蒲、远志、茯苓交通心肾，调协水火，开窍化痰；五味子收敛浮阳；姜、枣调和营卫；薄荷利咽。综合本方，上下并治，标本兼顾，而以治下治本为主。诸药合用共奏滋肾阴、补肾阳，开窍化痰之功，使下元得以温养，浮阳得以摄纳，水火相济，虚火得清，痰浊得除，喑痱自愈。
 
 本方药多温燥刚烈，不宜久服。如服用较久时，可以仙茅、淫羊藿代替桂、附。
 
