--- a/ok/fjx/fjx16-0.9.0.0.0.md
+++ b/ok/fjx/fjx16-0.9.0.0.0.md
@@ -28,7 +28,7 @@
 
 现代用治面神经麻痹，口眼歪斜有效。
 
-〔文献摘录〕王泰林：“麻黄、杏仁、麻黄汤也，治寒。桂枝、芍药，桂枝汤也，治风。参、草补气，芎、芍养血，生姜散寒，防风治风淫，防己治湿淫，附子治寒淫，黄芩治热淫，故为治中风之通剂。刘宗厚《玉机微义》曰：‘此方无分经络，不辨寒热虚实，虽多亦系以为。'汪訒庵《医方集解》曰‘此方今人罕用，然古今风方，多从此方损益为治。’旭高按：此方即从《古今录验》续命汤加减。盖病来杂扰，故药亦兼该也。“（《王旭高医书六种》）
+〔文献摘录〕王泰林：“麻黄、杏仁，麻黄汤也，治寒。桂枝、芍药，桂枝汤也，治风。参、草补气，芎、芍养血，生姜散寒，防风治风淫，防己治湿淫，附子治寒淫，黄芩治热淫，故为治中风之通剂。刘宗厚《玉机微义》曰：‘此方无分经络，不辨寒热虚实，虽多亦系以为。'汪訒庵《医方集解》曰‘此方今人罕用，然古今风方，多从此方损益为治。’旭高按：此方即从《古今录验》续命汤加减。盖病来杂扰，故药亦兼该也。“（《王旭高医书六种》）
 
 复习思考题
 
