--- a/ok/wk/wk14-0.3.0.0.0.md
+++ b/ok/wk/wk14-0.3.0.0.0.md
@@ -24,11 +24,12 @@
 
 治法：温肾散寒，化痰消结。
 
-方药：阳和汤加减。若阴囊冷湿者，加泽泻、仙灵脾；食纳不香、消瘦者，加党参、白术、砂仁、陈皮；局部抽痛，痛连少腹者，加炒小茴香、川楝子。
+方药：阳和汤加减。
+若阴囊冷湿者，加泽泻、仙灵脾；食纳不香、消瘦者，加党参、白术、砂仁、陈皮；局部抽痛，痛连少腹者，加炒小茴香、川楝子。
 
 2.成脓：常在数月以至数年后，阴囊与睾丸逐渐粘合，皮色紫红，形成脓肿。全身可有午后低热，乏力盗汗，腰酸困疼，舌红，苔薄黄，脉细数。证属寒化为热，阳损及阴，热盛肉腐，成脓将溃。
 
-治法：滋阴清热；化痰排脓。
+治法：滋阴清热，化痰排脓。
 
 方药：滋阴除湿汤合透脓散加减。
 
@@ -52,11 +53,11 @@
 
 （五）临证权变
 
-溃后形成漏管者，内治以补养生肌，可用人参养荣汤合十全大补汤加减，外用五五丹药捻等化腐败脓，脓尽用生肌散收口
+溃后形成漏管者，内治以补养生肌，可用人参养荣汤合十全大补汤加减，外用五五丹药捻等化腐败脓，脓尽用生肌散收口。
 
 〔调护〕
 
-1.加强饮食营养，注意休息.
+1.加强饮食营养，注意休息。
 
 2.阴囊应用阴囊托托起。
 
@@ -70,4 +71,4 @@
 
 4月28日三诊：睾丸肿物已见缩小，体温渐趋正常（37.2°C）,黄腻苔渐退，仍觉疲乏无力，上方加减继服。至1980年6月30日，睾丸肿块虽末全消（留有黄豆大小结节），但全身情况良好，体温正常。
 
-**按**：此证系阴损及阳，寒热错杂，大热不除之重症，多非平平之药所能取效者。本方大黄、附子同用，除大热，祛沉寒，乃前贤之经验。岳美中老中医曾考证《金匮要略》大黄附子汤。日本人尾台格堂《类聚方广义》谓：此方能起寒疝，阴囊肿痛。浅田宗伯《勿药药室方函口诀》谓：大黄与附子为伍者，皆非寻常之症，如附子泻心汤，温脾汤亦然。凡顽固偏僻难拔之疾，皆阴阳错杂，非常例所拘。（编者临床治验）
+**按**：此证系阴损及阳，寒热错杂，大热不除之重症，多非平平之药所能取效者。本方大黄、附子同用，除大热，祛沉寒，乃前贤之经验。岳美中老中医曾考证《金匮要略》大黄附子汤。日本人尾台榕堂《类聚方广义》谓：此方能起寒疝，阴囊肿痛。浅田宗伯《勿药药室方函口诀》谓：大黄与附子为伍者，皆非寻常之症，如附子泻心汤，温脾汤亦然。凡顽固偏僻难拔之疾，皆阴阳错杂，非常例所拘。（编者临床治验）
