update ok/hk/hk1gl01-0.20.0.0.0.md. 标题字体缩小 时间的蹉舵  跎

--- a/ok/hk/hk1gl01-0.20.0.0.0.md
+++ b/ok/hk/hk1gl01-0.20.0.0.0.md
@@ -1,4 +1,4 @@
-## 走马喉风（喉梗阻）
+## 走马喉风<small>（喉梗阻）</small>
 
 喉腔受到各种病变的影响发生急性阻塞或收缩狭窄，以致喉部通气困难，称喉梗阻或喉阻塞。此时最突出的表现是呼吸困难，甚至窒息。若不及时抢救，随时可以引起死亡，而且从发病到死亡为时极短。所以中医习惯上称走马喉风。走马言其快速，风雷火电以风来喻其凶猛善变。
 
@@ -60,7 +60,7 @@
 
 水剂汤药，凡偏重于痰者，当消痰退肿以利咽。常用代表方有麻杏石甘汤合蝉衣、徐长卿、马勃、干地龙、天竹黄、胆星等。如偏重于热者，当清热解毒、消痰利咽法。常用代表方有黄连解毒汤合导痰汤共进。如偏重于风者，当熄风消痰利咽法。常用代表方为导痰汤合三虫散同用。
 
-总之，本病的内服药，力求药力猛、见效快，而且还要拿来即用，不允许在时间的蹉舵。
+总之，本病的内服药，力求药力猛、见效快，而且还要拿来即用，不允许在时间的蹉跎。
 
 六神丸，也是常用药。但用量较一般的加倍。也就是成人每次20粒，每六小时一次。最好不是吞服而是噙化。雄黄解毒丸非专科喉医，恐非常备药品，那末取控涎丹暂代。用量每次1.5〜3克。小儿，可用鲜竹沥。每次1〜3毫升。每隔2小时一次。猴枣（并非猴枣散），每天3次，每次0.3克。但需研到极细的粉末，开水送服。
 
