update ok/hk/hk1gl01-0.21.0.0.0.md. 标题字体缩小 失音《史记•索隐》 廝 𤺊

--- a/ok/hk/hk1gl01-0.21.0.0.0.md
+++ b/ok/hk/hk1gl01-0.21.0.0.0.md
@@ -1,4 +1,4 @@
-## 喑病（嘶哑与失音）
+## 喑病<small>（嘶哑与失音）</small>
 
 嘶哑或失音，在一般文献上（是指西医的）除《中国医学百科全书•耳鼻咽喉科学》之外没有作为一个独立病名而加以专门讨论的。但中医则不然，从《内经》开始，一直就作为一个病种来使用。仅仅一部《内经》，提到本病者，计七八处之多。
 
@@ -22,6 +22,6 @@
 
 根据这示意图的内容，本文所讨论的病变，都是在于“动力”与“发音”两个部门。
 
-历代名称：喑、言无音《内经》 失音《史记•索隐》 廝、沙、喝《方言》 喑《说文》 嘶嘎《释名》 声破《后汉书•王莽传•颜注》 失声、声嘶《诸病源候论》 声干《直指方》 喑痖《儒门事亲》 嘶喉、声散《脉因证治》 郑声《丹溪手镜》 喉喑《医学纲目》 哑风《古今医鉴》 音喑、《本草纲目》 卒喑、暴喑《名医类案》 音哑、声喑《景岳全书》 喉音不清《丹台医案》 哑劳《简明医彀》 声哑《疡医大全》 喑哑《古今医案按》 失音不语《鲍氏验方新编》 哑喉《梅氏验方新编》。
+历代名称：喑、言无音《内经》 失音《史记•索隐》 𤺊、沙、喝《方言》 喑《说文》 嘶嘎《释名》 声破《后汉书•王莽传•颜注》 失声、声嘶《诸病源候论》 声干《直指方》 喑痖《儒门事亲》 嘶喉、声散《脉因证治》 郑声《丹溪手镜》 喉喑《医学纲目》 哑风《古今医鉴》 音喑、《本草纲目》 卒喑、暴喑《名医类案》 音哑、声喑《景岳全书》 喉音不清《丹台医案》 哑劳《简明医彀》 声哑《疡医大全》 喑哑《古今医案按》 失音不语《鲍氏验方新编》 哑喉《梅氏验方新编》。
 
 本文所讨论的，属于嘶哑失音疾患，除外特殊性感染如白喉、猩红热、狼疮、结核、麻风、梅毒以及肿瘤、喉炎、声门和它的邻近组织炎而影响发音者的发音不能正常的病患。
