--- a/ok/wk/wk14-0.4.0.0.0.md
+++ b/ok/wk/wk14-0.4.0.0.0.md
@@ -58,11 +58,12 @@
 
 〔调护〕
 
-1.卧床伏息
+1.卧床休息。
 
 2.用阴囊托将阴囊托起。
 
-〔应用例案〕刘XX,男，1个月。出生18天，阴囊下面皮肤破碎，后即右睾肿胀，治之无效。今睾丸大如鸡卵，阴囊皮肤红紫。谅由热毒外侵，阻于肝络，而成子痈、囊痈。兹拟解热毒，清肝火，和气血，仿枸橘汤加减。①川楝子6克、全枸橘6克、青皮3克、赤芍4.5克、泽泻6克、生甘草3克、连翘6克、紫地丁15克、半边莲6克，一日一剂。②黄连油膏纱布加青敷药，敷阴囊红肿处，一日一换。治疗两天，局部肿胀已明显消退，药既应手，继予原方3贴，后即痊愈。
+〔应用例案〕
+刘XX，男，1个月。出生18天，阴囊下面皮肤破碎，后即右睾肿胀，治之无效。今睾丸大如鸡卵，阴囊皮肤红紫。谅由热毒外侵，阻于肝络，而成子痈、囊痈。兹拟解热毒，清肝火，和气血，仿枸橘汤加减。①川楝子6克、全枸橘6克、青皮3克、赤芍4.5克、泽泻6克、生甘草3克、连翘6克、紫地丁15克、半边莲6克，一日一剂。②黄连油膏纱布加青敷药，敷阴囊红肿处，一日一换。治疗两天，局部肿胀已明显消退，药既应手，继予原方3贴，后即痊愈。
 
 **按**：新生儿患囊痈者甚少。此病由感染热毒而起，故用枸橘汤加地丁、连翘、半边莲以解其热毒，局部用黄连膏纱布以保护皮肤，青敷药以解毒消肿，内外合治而愈。（节选自《许履和外科医案医话集》）
 
@@ -74,6 +75,6 @@
 
 〔文献摘录〕
 
-1.从《外科理例·卷三》：“囊痈，肿痛未作脓者，疏肝导湿。肿硬发热，清肝降火。脓清不敛者，大补气血。已溃者，滋阴托里。”
+1.《外科理例·卷三》：“囊痈，肿痛未作脓者，疏肝导湿。肿硬发热，清肝降火。脓清不敛者，大补气血。已溃者，滋阴托里。”
 
 2.《外科大成·卷二下部前》：“夫囊痈者，阴囊红痈热痛也，由肝肾阴虚，湿热下注所致。……囊痈与疝气相类，但痈则阴囊红肿热痛，内热口干，小便赤涩。若疝则小腹痛牵引肾子，少热多寒，好饮热汤为异耳。若水疝，虽肿而光，虽痛有时，不红不热，按之软而即起为异耳”。
