update ok/hk/hk1gl01-0.21.2.0.0.md. 月闭亦有胞脉绝著 者

--- a/ok/hk/hk1gl01-0.21.2.0.0.md
+++ b/ok/hk/hk1gl01-0.21.2.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因〕
 
-可以引用《医述》的话，是“室女有无故而喑者，瘀月闭也，亦胞脉绝也。重身有胞脉绝者，月闭亦有胞脉绝著。皆瘀血阻塞，少阴通舌本之道也”。因之可知，它的病理机制相仿于妊娠期失音。
+可以引用《医述》的话，是“室女有无故而喑者，瘀月闭也，亦胞脉绝也。重身有胞脉绝者，月闭亦有胞脉绝者。皆瘀血阻塞，少阴通舌本之道也”。因之可知，它的病理机制相仿于妊娠期失音。
 
 〔论治〕
 
