--- a/ok/ek/ek0zl05-0.1.0.0.0.md
+++ b/ok/ek/ek0zl05-0.1.0.0.0.md
@@ -4,7 +4,7 @@
 
 （一）望神态 人体精神状态可以反映内在脏腑机能活动的情况。如小儿形体壮实，面部表情灵活愉快，且有光彩，面色红润，声音洪亮，肢体活动灵敏，这是正气未伤，精神充足的表现，叫做“得神”，若形体羸瘦，面部表情呆滞，目无光彩，面色晦暗，声音低沉，意识不清，肢体活动迟钝，甚至不能自主，这是正气已伤，精神不足或精神失常的表现，叫做“失神”。
 
-（二）望气色 色是指脏腑气血的外荣，脏腑发生病变，相应地反映于色泽，根据不同的色泽，综合病情，可以看出疾病的发展和演变，望色要注意察色的神气。一般说来，气怯则色必衰，其为虚可知；气壮色必盛，其为实可知。石芾南《医原•望病须察神气论》：“神气者，有光有体是也。光者外面明朗，体者里面润泽。”所以正常的肤色是红黄隐隐，鲜明润泽，表示气血充盈，有光有体，神气俱备，为健康无病。但也有稍偏自偏黄者，或随着四时气候不同而肤色亦微有变化者，均属正常范围。
+（二）望气色 色是指脏腑气血的外荣，脏腑发生病变，相应地反映于色泽，根据不同的色泽，综合病情，可以看出疾病的发展和演变，望色要注意察色的神气。一般说来，气怯则色必衰，其为虚可知；气壮色必盛，其为实可知。石芾南《医原•望病须察神气论》：“神气者，有光有体是也。光者外面明朗，体者里面润泽。”所以正常的肤色是红黄隐隐，鲜明润泽，表示气血充盈，有光有体，神气俱备，为健康无病。但也有稍偏白偏黄者，或随着四时气候不同而肤色亦微有变化者，均属正常范围。
 
 （三）望面色 主要指望面部的色泽。《内经》说：“五脏六腑，十二经脉，三百六十五络，其气血皆上注于面。”故望面色，可以了解内脏气血的盛衰。正常小儿的面色，不论肤色如何，均宜红润而有光泽，有些小儿肤色较白，但白里透红，说明气血调和，脏腑功能良好。如果面色晦暗，枯槁无华，为气血不调，脏腑功能衰弱的表现。
 
