--- a/ok/rm/rm04.md
+++ b/ok/rm/rm04.md
@@ -1,19 +1,22 @@
-
 # 第四章 人体运行框架
 
-### 1、运行框架
+[TOC]
+
+
+
+## 1、运行框架
 
 通过第三章的学习，我们应该建立起一个人体运行的基本框架。 
 
-#### 1、功能与形体：
+### 1、功能与形体
 
 人体的主要功能是运动、思维、感受与表达。功能正常需要头、四肢、身躯的皮、肉、脉、筋、骨等形体组织能正常工作。
 
-#### 2、形体与气血：
+### 2、形体与气血
 
 形体组织能正常工作需要其处在一个适宜的人体内部环境中。适宜的人体内部环境由气血等要素维持，因此气血为形体之本。
 
-> **形与气相任则寿，不相任则夭（l)。皮与肉相果则寿，不相果则夭（2）。血气经络胜形则寿，不胜形则夭（3）。**...
+> **形与气相任则寿，不相任则夭。皮与肉相果则寿，不相果则夭。血气经络胜形则寿，不胜形则夭。**...
 >
 > **气血**等基本物质，经络等脏腑组织的功能，是**人体的根本**，而人体的躯壳好象树木的枝叶。如果气血的强盛胜过形骸，是人体生命力旺盛的表现，就长寿。反之，如果不能胜过形骸，就夭亡。
 >
@@ -29,7 +32,7 @@
 
 中医讨论的疾病大部分在这个环节，即气血充养形体、脏腑过程中遇到的问题。以后在学习《伤寒论》、《金匮要略》、《温病条辨》的时候会探讨人体各个部位（皮肉筋骨脉、头项胸腹肩背腰、四肢关节、脏腑经络）的正（元气、宗气、营卫气、津、血）虚和邪（风热暑湿燥寒、痰饮、淤血）实问题。了解这些问题的外在表现，及如何判断与治疗。
 
-#### 3、气血与脏腑经络：
+### 3、气血与脏腑经络
 
 气血等要素由脏腑产生，由经络系统主导输送。脏腑功能强健，则可以产生足够气血。脏腑功能虚弱，则气血不足。因此脏腑为气血之本。
 
@@ -49,7 +52,7 @@
 
 经络、血脉、三焦作为要素传递通道，需畅通无阻，其中以经络通畅为主导。
 
-#### 4、脏腑与精
+### 4、脏腑与精
 
 脏腑功能的强健，需要脏腑的阴阳平衡，即能量与物质配合协调。精可以补人一身之阴阳，精足则脏腑不易失衡。精不足则脏腑功能虚弱。精亡则人亡。因此脏腑所藏之精为脏腑之本。
 
@@ -69,7 +72,7 @@
 >
 > 《素问-上古天真论》
 
-#### 5、精与先后天之本
+### 5、精与先后天之本
 
 脏腑所藏之精分别来自先天与后天。后天之精主要来自脾胃，人无胃气则亡。先天之精主要存于肾，若耗尽，人亦亡。因此脾胃被称为后天之本，肾被称为先天之本。
 
@@ -77,13 +80,13 @@
 >
 > 《素问•玉机真藏论》
 
-> **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃（1）。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾（2）。**
+> **胃者，五藏六腑之海也，水谷皆入于胃，五藏六腑皆禀气于胃。五味各走其所喜，谷味酸，先走肝；谷味苦，先走心；谷味甘，先走脾；谷味辛，先走肺；谷味咸，先走肾。**
 >
 > 《灵枢·五味》
 
 人体的形、气血与脏腑所藏的后天之精皆来自对自然界天气、地气的吸收，所以呼吸与饮食都很重要。
 
-> **天食人以五气，地食人以五味(1)。五气入鼻，藏于心肺，上使五色修明，音声能彰(2)。五味入口，藏于肠胃，味有所藏，以养五气(3)，气和而生，津液相成，神乃自生(4)。**
+> **天食人以五气，地食人以五味。五气入鼻，藏于心肺，上使五色修明，音声能彰。五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。**
 >
 > 《素问•六节藏象论》
 
@@ -99,7 +102,7 @@
 >
 > 《灵枢-平人绝谷第三十二》
 
-#### 6、神与其它：
+### 6、神与其它：
 
 神总管以上全部过程，无论是高级的思维情绪还是低级的人体本能，所有平衡过程都由神来控制。若神的控制能力强，则即便精、气、血、形的数量稍少，也能配合的很好。反之，如果神的控制能力弱，则即便其它要素较多，也可能出现分配不合理的情况。
 
@@ -115,21 +118,21 @@
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
-#### 7、小结
+### 7、小结
 
 人体以五脏为中心，生成并存储精、神、元气、气态物质、血、津液等要素，再以经络系统为主导，将要素传递到全身组织器官，形成适宜的体内环境，完成人体的整体功能活动。
 
 人体有很多因果（标本）关系。上述功能、形体、气血、脏腑经络、精、神是其中比较主要的部分，相互之间皆如树干与树根的关系。根为干之本，树根有问题必然影响树干，而树干的问题则即可能是树干本身的问题也可能是树根的问题。所以中医治病并非哪里发病就治疗哪里，而要分析疾病根源，以治本为主，除非紧急或特殊情况才以治标为先。明辨标本，急则治标，缓则治本，这就是中医的整体观。
 
-> 阴阳者，天地之道也（1），万物之纲纪（2），变化之父母（3），生杀之本始，神明之府也（4），**治病必求于本**（5）。
+> 阴阳者，天地之道也，万物之纲纪，变化之父母，生杀之本始，神明之府也，**治病必求于本**。
 >
 > 《素问·阴阳应象大论》
 
-> **夫标本之道，要而博，小而大，可以言一而知百病之害**⑴。言标与本，易而勿损，察本与标，气可令调， 明知胜复，为万民式，天之道毕矣⑵。
+> **夫标本之道，要而博，小而大，可以言一而知百病之害**。言标与本，易而勿损，察本与标，气可令调， 明知胜复，为万民式，天之道毕矣。
 >
 > 《素问•至真要大论》
 
-### 2、指标失衡与人体疾病
+## 2、指标失衡与人体疾病
 
 |      | 精     | 神       | 元气 | 天气                          | 血            | 津液   | 形         |
 | ---- | ------ | -------- | ---- | ----------------------------- | ------------- | ------ | ---------- |
@@ -164,7 +167,7 @@
 >
 > 《伤寒论讲解-38条》
 
-> 小结胸病，正在**心下，按之则痛(1)，脉浮滑(2)**者，小陷胸汤主之(3)。[138]
+> 小结胸病，正在**心下，按之则痛，脉浮滑**者，小陷胸汤主之。
 >
 > 《伤寒论讲解-138条》
 
@@ -196,5 +199,7 @@
 
 ## 题目
 
-1. 气血为----之本，而----则为气血之本
-2. 小陷胸汤证属于在一个部位上有两个指标失衡，一个部位是指----部位，两个指标分别是----、热。大青龙汤证则是两个部位的失衡，为-----有热，外有----。
+1. 气血为 __ 之本，而 __ 则为气血之本
+2. 小陷胸汤证属于在一个部位上有两个指标失衡，一个部位是指 __ 部位，两个指标分别是 __ 、热。大青龙汤证则是两个部位的失衡，为 __ 有热，外有 __ 。
+
+
