--- a/ok/bc/bc03-0.4.1.0.0.md
+++ b/ok/bc/bc03-0.4.1.0.0.md
@@ -4,7 +4,7 @@
 
 【讲解】（1）杨梅恶疮：由梅毒引起的各种皮肤病变。因疮形似杨梅，故名。（2）尸疰：即劳瘵。与现代医学之结核病相似。
 
-金银花为治热毒疮痈，风热表证的要药。为忍冬科多年生常绿缠绕性木质藤本植物忍冬的花蕾。又名忍冬花、二宝花。生用，或妙炭用。或制为露剂。
+金银花为治热毒疮痈，风热表证的要药。为忍冬科多年生常绿缠绕性木质藤本植物忍冬的花蕾。又名忍冬花、二宝花。生用，或炒炭用。或制为露剂。
 
 本品味甘性寒，入肺、胃、大肠、心经。古人认为：六淫为害，以火为最，火盛者谓之毒。解毒之药必治火，治火之药亦解毒。因此，药性寒凉而入心经的金银花，既能清热，又能解毒，为外科常用的清热解毒药，以治疮痈疖肿诸证。
 
@@ -20,6 +20,6 @@
 
 用于热毒泻痢，腹痛下脓血，可单用浓煎服。重证可与黄连、白芍、白头翁等同用。
 
-【用量用法】10~30克，煎服。外用适量。凡热毒疮痈，用量宜重；温病发热，用量宜轻，且宜生用；治血痢便血，则须炒炭用。
+【用量用法】10——30克，煎服。外用适量。凡热毒疮痈，用量宜重；温病发热，用量宜轻，且宜生用；治血痢便血，则须炒炭用。
 
 附：**忍冬藤**        为忍冬的茎叶，又名银花藤。性味功效与金银花相似，解毒作用虽不及银花，但有通经活络的作用，可消除经络之风湿热邪而止疼痛，故可用于风湿热痹，关节红肿疼痛，屈伸不利之证。
